Correções primeiras reasenhas. Problema com python em Turma_.org

--- a/Materias/2S2020/PED_CE342/Turma_A/233747.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/233747.org
@@ -58,3 +58,21 @@ Mais ao fim, foi colocada algumas críticas às hipóteses da TQM. No entanto, n
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+
+* Resenha 3: Novos Keynesianos :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 3
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
+
