--- a/Materias/2S2020/PED_CE342/Turma_C/158425.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/158425.org
@@ -19,7 +19,7 @@
 
   #+BEGIN: columnview :maxlevel 3 :id global
   #+END
-
+  
 * Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
@@ -39,3 +39,16 @@ Você corretamente posiciona o monetarismo enquanto contraponto ao paradigma pre
 Em seguida, é apresentada a curva de Phillips e sua versão aceleracionista. No entanto, esta discussão é feita sem uma mediação com a anterior. Você corretamente pontua a relação entre estabilidade de preços e de nível de emprego (compatível com o desemprego natural). Apesar disso, o conceito de curva de Phillips vertical esta desconectada com o resto do parágrafo. Adiante, corretamente relacionada ilusão monetária com curva de Phillips aceleracionista. Mais adiante, são colocadas as recomendações de política econômica que vão além da simples regra de expansão monetária. O mesmo vale para a discussão das defasagens temporais. Ao discutir as regras monetárias, é dada muita ênfase aos elementos expectacionais da teoria. No entanto, como você mesmo coloca ao discutir a TQM, a estabilidade de preços só seria possível se os agregados monetários crescerem à uma mesma taxa que o nível de produto. Portanto, o argumento vai além de facilitar previsão dos agentes.
 
 Por fim, a discussão da função consumo e sua relação com a hipótese de velocidade de circulação da moeda constante está desassociada do restante do texto (``jogada''). 
+
+
+* Resenha 3: Novos Keynesianos
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingindo minimamente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido parcialmente
+  :END:
