--- a/Materias/2S2020/PED_CE342/Turma_C/199967.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/199967.org
@@ -52,3 +52,16 @@ No início de sua resenha, apontou corretamente a principal implicação econôm
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+
+* Resenha 3: Novos Keynesianos
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido satisfatoriamente
+  :END:
