--- a/Materias/2S2020/PED_CE342/Turma_A/232395.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/232395.org
@@ -43,7 +43,7 @@ Adiante, é corretamente pontuado que uma das recomendações da escola monetari
 Também é colocada a importância dessa escola para as posteriores e como dão ênfase à política monetária. No entanto, não há menção à principal proposição: regras monetárias
 * Resenha 2: Novos Clássicos                                        :private:
   :PROPERTIES:
-  :TAREFA:   Resenha 1
+  :TAREFA:   Resenha 2
   :OBJETIVO: Atingido totalmente
   :ARGUMENTO: Atingido satisfatoriamente
   :CONCEITOS: Atingido parcialmente
@@ -56,3 +56,19 @@ Também é colocada a importância dessa escola para as posteriores e como dão 
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 3
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
+
