--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-16 seg 20:26
+% Created 2020-11-21 sáb 15:06
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,162 +38,46 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:orgdb8e0cd}
+\label{sec:orgeea7c61}
 
-\begin{center}
-\begin{longtable}{lr}
-\caption{Notas das resenhas - Monetaristas}\\
-\toprule
-{} &  Resenha Monetaristas \\
-\midrule
-\endhead
-\midrule
-\multicolumn{2}{r}{{Continued on next page}} \\
-\midrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-\textbf{0 } &                  50.0 \\
-\textbf{1 } &                  50.0 \\
-\textbf{2 } &                  70.0 \\
-\textbf{3 } &                   0.0 \\
-\textbf{4 } &                  70.0 \\
-\textbf{5 } &                  70.0 \\
-\textbf{6 } &                  70.0 \\
-\textbf{7 } &                  30.0 \\
-\textbf{8 } &                  70.0 \\
-\textbf{9 } &                  50.0 \\
-\textbf{10} &                  70.0 \\
-\textbf{11} &                  50.0 \\
-\textbf{12} &                   0.0 \\
-\textbf{13} &                  30.0 \\
-\textbf{14} &                   0.0 \\
-\textbf{15} &                  70.0 \\
-\textbf{16} &                  50.0 \\
-\textbf{17} &                  70.0 \\
-\textbf{18} &                  50.0 \\
-\textbf{19} &                  70.0 \\
-\textbf{20} &                  70.0 \\
-\textbf{21} &                  50.0 \\
-\textbf{22} &                 100.0 \\
-\textbf{23} &                  70.0 \\
-\textbf{24} &                  70.0 \\
-\textbf{25} &                  50.0 \\
-\textbf{26} &                   0.0 \\
-\textbf{27} &                  30.0 \\
-\textbf{28} &                  70.0 \\
-\textbf{29} &                  50.0 \\
-\textbf{30} &                  30.0 \\
-\textbf{31} &                  50.0 \\
-\textbf{32} &                  50.0 \\
-\textbf{33} &                  50.0 \\
-\textbf{34} &                  70.0 \\
-\textbf{35} &                   0.0 \\
-\textbf{36} &                  50.0 \\
-\textbf{37} &                  50.0 \\
-\textbf{38} &                 100.0 \\
-\textbf{39} &                  50.0 \\
-\textbf{40} &                 100.0 \\
-\textbf{41} &                   0.0 \\
-\textbf{42} &                  70.0 \\
-\end{longtable}
-\end{center}
+| None |
 
 \subsection{Notas}
-\label{sec:orgdfaf8ed}
+\label{sec:org05426a4}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
 
 \subsection{Notas e presença}
-\label{sec:org9a210b3}
+\label{sec:org9eab56d}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
 
 \section{Novos Clássicos}
-\label{sec:orgf8530c0}
+\label{sec:org449586e}
 
 \begin{itemize}
 \item[{$\square$}] Identificar respostas das questões (forms)
 \item[{$\square$}] Computar notas
 \item[{$\square$}] Preencher presenhas na tabela da Ana Rosa
 \end{itemize}
-\begin{center}
-\begin{longtable}{lr}
-\caption{Notas das resenhas - Novos Clássicos}\\
-\toprule
-{} &  Resenha Novos Clássicos \\
-\midrule
-\endhead
-\midrule
-\multicolumn{2}{r}{{Continued on next page}} \\
-\midrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-\textbf{0 } &                      5.0 \\
-\textbf{1 } &                     10.0 \\
-\textbf{2 } &                      5.0 \\
-\textbf{3 } &                        - \\
-\textbf{4 } &                     10.0 \\
-\textbf{5 } &                      5.0 \\
-\textbf{6 } &                     10.0 \\
-\textbf{7 } &                      7.0 \\
-\textbf{8 } &                      5.0 \\
-\textbf{9 } &                      5.0 \\
-\textbf{10} &                     10.0 \\
-\textbf{11} &                      0.0 \\
-\textbf{12} &                        - \\
-\textbf{13} &                        - \\
-\textbf{14} &                        - \\
-\textbf{15} &                     10.0 \\
-\textbf{16} &                      7.0 \\
-\textbf{17} &                     10.0 \\
-\textbf{18} &                      0.0 \\
-\textbf{19} &                      5.0 \\
-\textbf{20} &                      0.0 \\
-\textbf{21} &                      5.0 \\
-\textbf{22} &                      7.0 \\
-\textbf{23} &                      7.0 \\
-\textbf{24} &                      5.0 \\
-\textbf{25} &                     10.0 \\
-\textbf{26} &                      5.0 \\
-\textbf{27} &                      5.0 \\
-\textbf{28} &                      7.0 \\
-\textbf{29} &                      5.0 \\
-\textbf{30} &                      0.0 \\
-\textbf{31} &                      5.0 \\
-\textbf{32} &                     10.0 \\
-\textbf{33} &                      0.0 \\
-\textbf{34} &                      3.0 \\
-\textbf{35} &                      0.0 \\
-\textbf{36} &                      5.0 \\
-\textbf{37} &                      5.0 \\
-\textbf{38} &                      7.0 \\
-\textbf{39} &                      5.0 \\
-\textbf{40} &                     10.0 \\
-\textbf{41} &                      3.0 \\
-\textbf{42} &                      5.0 \\
-\end{longtable}
-\end{center}
+| None |
 \subsection{Notas}
-\label{sec:orgd558929}
+\label{sec:org099ddc9}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
 \end{center}
 \subsection{Notas e Presença}
-\label{sec:orge18a3be}
+\label{sec:org84a4d9f}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:orga22f2a5}
+\label{sec:orgc31d6c1}
 \subsubsection{Sorteio}
-\label{sec:org48c23d9}
+\label{sec:orgb26ac01}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["238414"]
@@ -217,7 +101,7 @@ resultado
 \end{minted}
 
 \begin{verbatim}
-RA Sorteados
+    RA Sorteados
 1              1
 2              2
 3              8
@@ -234,7 +118,7 @@ RA Sorteados
 \end{verbatim}
 
 \subsubsection{Resultado Turnitin}
-\label{sec:org2cbe7f5}
+\label{sec:org39ee502}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -263,136 +147,44 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:orgd726e14}
+\label{sec:org8217568}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
 \item Atualização das notas
-\label{sec:org639dddc}
+\label{sec:orga106bf0}
 \end{enumerate}
 \subsection{Questões}
-\label{sec:org348d015}
+\label{sec:orged33750}
 
 \begin{verbatim}
-Sobreposição das respostas 0.717948717948718%
+None
 \end{verbatim}
 
 \subsubsection{Importando pacotes e funções}
-\label{sec:orgfb5b84a}
+\label{sec:org5260dea}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
 \end{center}
 
 
-\begin{tabular}{llllrr}
-\toprule
-{} &     Q1 &     Q2 &                                      Justificativa &  Nota\_1 &  Nota\_2 \\
-Carimbo de data/hora         &        &        &                                                    &         &         \\
-\midrule
-2020/11/09 10:09:49 AM GMT-3 &  Falso &  Falso &  Se os agentes antecipam a expansão monetária, ... &       1 &       1 \\
-\bottomrule
-\end{tabular}
+| None |
 
 
 \section{Lista de presença e notas}
-\label{sec:orgfa9f8f5}
-\begin{center}\begin{landscape}
-\small
-\setlength\LTleft{0pt}
-\setlength\LTright{0pt}
-\begin{longtable}{lllrrrrrl}
-\caption{Lista de presença e de notas}\label{lista}\\
-\toprule
-{} &      RA &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &               Email \\
-\midrule
-\endhead
-\midrule
-\multicolumn{9}{r}{{Continued on next page}} \\
-\midrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-\textbf{0     } &  212883 &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &   a0@dac.unicamp.br \\
-\textbf{1     } &  212900 &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &   a1@dac.unicamp.br \\
-\textbf{2     } &  231302 &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &   a2@dac.unicamp.br \\
-\textbf{3     } &  231732 &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &   a3@dac.unicamp.br \\
-\textbf{4     } &  213360 &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &   a4@dac.unicamp.br \\
-\textbf{5     } &  231898 &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &   b5@dac.unicamp.br \\
-\textbf{6     } &  213731 &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &   b6@dac.unicamp.br \\
-\textbf{7     } &  232395 &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &   b7@dac.unicamp.br \\
-\textbf{8     } &  232796 &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &   c8@dac.unicamp.br \\
-\textbf{9     } &  233335 &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &   d9@dac.unicamp.br \\
-\textbf{10    } &  233747 &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &  e10@dac.unicamp.br \\
-\textbf{11    } &  255207 &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &  f11@dac.unicamp.br \\
-\textbf{12    } &  216459 &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  g12@dac.unicamp.br \\
-\textbf{13    } &  235951 &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &  g13@dac.unicamp.br \\
-\textbf{14    } &  236276 &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &  g14@dac.unicamp.br \\
-\textbf{15    } &  218090 &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &  i15@dac.unicamp.br \\
-\textbf{16    } &  255241 &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &  i16@dac.unicamp.br \\
-\textbf{17    } &  237618 &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &  j17@dac.unicamp.br \\
-\textbf{18    } &  199735 &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &  j18@dac.unicamp.br \\
-\textbf{19    } &  218975 &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &  j19@dac.unicamp.br \\
-\textbf{20    } &  238414 &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      0.0 &  j20@dac.unicamp.br \\
-\textbf{21    } &  219613 &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &  k21@dac.unicamp.br \\
-\textbf{22    } &  219907 &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &  l22@dac.unicamp.br \\
-\textbf{23    } &  239052 &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &  l23@dac.unicamp.br \\
-\textbf{24    } &  220194 &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &  l24@dac.unicamp.br \\
-\textbf{25    } &  201326 &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &  l25@dac.unicamp.br \\
-\textbf{26    } &  156242 &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &  l26@dac.unicamp.br \\
-\textbf{27    } &  240317 &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &  l27@dac.unicamp.br \\
-\textbf{28    } &  240409 &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &  l28@dac.unicamp.br \\
-\textbf{29    } &  221515 &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &  m29@dac.unicamp.br \\
-\textbf{30    } &  255293 &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &  m30@dac.unicamp.br \\
-\textbf{31    } &  241430 &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &  m31@dac.unicamp.br \\
-\textbf{32    } &  222315 &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &  m32@dac.unicamp.br \\
-\textbf{33    } &  184528 &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &  m33@dac.unicamp.br \\
-\textbf{34    } &  222615 &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &  m34@dac.unicamp.br \\
-\textbf{35    } &  186966 &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &  s35@dac.unicamp.br \\
-\textbf{36    } &  244321 &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &  s36@dac.unicamp.br \\
-\textbf{37    } &  244379 &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &  s37@dac.unicamp.br \\
-\textbf{38    } &  187323 &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &  t38@dac.unicamp.br \\
-\textbf{39    } &  206194 &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &  t39@dac.unicamp.br \\
-\textbf{40    } &  245212 &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &  v40@dac.unicamp.br \\
-\textbf{41    } &  206883 &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &  v41@dac.unicamp.br \\
-\textbf{42    } &  245459 &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      5.0 &  v42@dac.unicamp.br \\
-\textbf{245459} &       - &                                     - &                     - &           - &           - &           - &                      0.0 &                   - \\
-\textbf{238414} &       - &                                     - &                     - &           - &           - &           - &                      5.0 &                   - \\
-\end{longtable}
-\end{landscape}\end{center}
+\label{sec:org5fb35ce}
+| None |
 
 
 \section{Seminários}
-\label{sec:org6876697}
+\label{sec:org62d0449}
 \subsection{Sorteio}
-\label{sec:orgbd629ac}
+\label{sec:orgff787a1}
 
-\begin{table}
-\centering
-\caption{Resultado sorteio das atas - Seminários}
-\begin{tabular}{ll}
-\toprule
-{} & Resultado \\
-Grupos   &           \\
-\midrule
-Grupo 1  &     Ata 3 \\
-Grupo 2  &     Ata 6 \\
-Grupo 3  &     Ata 7 \\
-Grupo 4  &    Ata 12 \\
-Grupo 5  &    Ata 11 \\
-Grupo 6  &     Ata 5 \\
-Grupo 7  &     Ata 2 \\
-Grupo 8  &     Ata 1 \\
-Grupo 9  &     Ata 4 \\
-Grupo 10 &    Ata 10 \\
-Grupo 11 &     Ata 9 \\
-Grupo 12 &     Ata 8 \\
-\bottomrule
-\end{tabular}
-\end{table}
+| None |
 
 
 \subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituir}
-\label{sec:org26b517c}
+\label{sec:org3cc9cc2}
 \end{document}
