--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.org
@@ -4,7 +4,7 @@
 #+DATE: 2020/2S
 #+PROPERTY: COLUMNS %RA %TAREFA(Tarefa) %NOTA(Nota)
 #+EXCLUDE_TAGS: private noexport
-#+PROPERTY: header-args:python  :session *Turma_C* :python /usr/bin/python3 :exports results
+#+PROPERTY: header-args:python :exports results :session
 #+LATEX_HEADER: \usepackage{longtable, pdflscape, booktabs}
 
 #+RESULTS:
@@ -26,6 +26,7 @@ Resenhas = ["Monetaristas", "Novos Clássicos", "Novos Keynesianos", "Novo Conse
 #+END_SRC
 
 #+RESULTS:
+: None
 
 ** Importando tabela Ana Rosa
 
@@ -128,7 +129,7 @@ df["Email"] = [df["Nome"][i][0] + str(df.index[i]) + "@dac.unicamp.br" for i in 
 ** Notas                                                             :ignore:
 
 #+NAME:Monetaristas
-#+BEGIN_SRC python :results table latex
+#+BEGIN_SRC python
 print('\\begin{center}')
 print(
     df[["Resenha Monetaristas"]].to_latex(
@@ -141,61 +142,6 @@ print('\end{center}')
 #+END_SRC
 
 #+RESULTS: Monetaristas
-#+begin_export latex
-\begin{center}
-\begin{longtable}{lr}
-\caption{Notas das resenhas - Monetaristas}\\
-\toprule
-{} &  Resenha Monetaristas \\
-\textbf{RA    } &                       \\
-\midrule
-\endhead
-\midrule
-\multicolumn{2}{r}{{Continued on next page}} \\
-\midrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-\textbf{230645} &                  50.0 \\
-\textbf{213549} &                  30.0 \\
-\textbf{257748} &                  50.0 \\
-\textbf{232568} &                  70.0 \\
-\textbf{233566} &                  30.0 \\
-\textbf{215626} &                   0.0 \\
-\textbf{91108 } &                     - \\
-\textbf{234311} &                  50.0 \\
-\textbf{216397} &                  30.0 \\
-\textbf{197474} &                  50.0 \\
-\textbf{234982} &                   0.0 \\
-\textbf{235042} &                   0.0 \\
-\textbf{197724} &                  50.0 \\
-\textbf{217350} &                  30.0 \\
-\textbf{174154} &                  30.0 \\
-\textbf{237534} &                  30.0 \\
-\textbf{237856} &                  50.0 \\
-\textbf{199967} &                  70.0 \\
-\textbf{103034} &                  50.0 \\
-\textbf{172577} &                  50.0 \\
-\textbf{159866} &                  50.0 \\
-\textbf{221896} &                  70.0 \\
-\textbf{257876} &                 100.0 \\
-\textbf{242087} &                   0.0 \\
-\textbf{242328} &                  50.0 \\
-\textbf{147614} &                   0.0 \\
-\textbf{176104} &                   0.0 \\
-\textbf{205149} &                 100.0 \\
-\textbf{205151} &                   0.0 \\
-\textbf{244207} &                  70.0 \\
-\textbf{158425} &                  50.0 \\
-\textbf{257932} &                 100.0 \\
-\textbf{177964} &                  70.0 \\
-\textbf{245099} &                  50.0 \\
-\textbf{206806} &                  50.0 \\
-\textbf{225851} &                  50.0 \\
-\end{longtable}
-\end{center}
-#+end_export
 
 ** Gráficos                                                          :ignore:
 *** Notas
@@ -277,59 +223,7 @@ print('\end{center}')
 
 #+RESULTS: NovosCla
 #+begin_export latex
-\begin{center}
-\begin{longtable}{lr}
-\caption{Notas das resenhas - Novos Clássicos}\\
-\toprule
-{} &  Resenha Novos Clássicos \\
-\textbf{RA    } &                          \\
-\midrule
-\endhead
-\midrule
-\multicolumn{2}{r}{{Continued on next page}} \\
-\midrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-\textbf{230645} &                      5.0 \\
-\textbf{213549} &                      5.0 \\
-\textbf{257748} &                      7.0 \\
-\textbf{232568} &                      5.0 \\
-\textbf{233566} &                      7.0 \\
-\textbf{215626} &                      0.0 \\
-\textbf{91108 } &                        - \\
-\textbf{234311} &                      5.0 \\
-\textbf{216397} &                      0.0 \\
-\textbf{197474} &                      5.0 \\
-\textbf{234982} &                      0.0 \\
-\textbf{235042} &                      0.0 \\
-\textbf{197724} &                      5.0 \\
-\textbf{217350} &                      0.0 \\
-\textbf{174154} &                      0.0 \\
-\textbf{237534} &                      3.0 \\
-\textbf{237856} &                      5.0 \\
-\textbf{199967} &                      7.0 \\
-\textbf{103034} &                      5.0 \\
-\textbf{172577} &                      7.0 \\
-\textbf{159866} &                      5.0 \\
-\textbf{221896} &                     10.0 \\
-\textbf{257876} &                     10.0 \\
-\textbf{242087} &                        - \\
-\textbf{242328} &                      7.0 \\
-\textbf{147614} &                      0.0 \\
-\textbf{176104} &                        - \\
-\textbf{205149} &                      0.0 \\
-\textbf{205151} &                      7.0 \\
-\textbf{244207} &                      7.0 \\
-\textbf{158425} &                      7.0 \\
-\textbf{257932} &                      7.0 \\
-\textbf{177964} &                      5.0 \\
-\textbf{245099} &                      7.0 \\
-\textbf{206806} &                      0.0 \\
-\textbf{225851} &                      0.0 \\
-\end{longtable}
-\end{center}
+| None |
 #+end_export
 
 ** Gráficos                                                          :ignore:
@@ -414,7 +308,7 @@ resultado
 
 #+RESULTS:
 #+begin_example
-RA Sorteados
+   RA Sorteados
 1        103034
 2        199967
 3        205151
@@ -582,62 +476,7 @@ print('\end{landscape}\end{center}')
 
 #+RESULTS: Lista
 #+begin_export latex
-\begin{center}\begin{landscape}
-\small
-\setlength\LTleft{0pt}
-\setlength\LTright{0pt}
-\begin{longtable}{llrrrrrl}
-\caption{Lista de presença e de notas}\label{lista}\\
-\toprule
-{} &                                   Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &                   Email \\
-\textbf{RA    } &                                        &                       &             &             &             &                          &                         \\
-\midrule
-\endhead
-\midrule
-\multicolumn{8}{r}{{Continued on next page}} \\
-\midrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-\textbf{230645} &                    alice pereira dario &                  50.0 &       17.86 &        0.00 &       19.47 &                      5.0 &  a230645@dac.unicamp.br \\
-\textbf{213549} &           beatriz helena toledo pastre &                  30.0 &        0.00 &        0.00 &        6.19 &                      5.0 &  b213549@dac.unicamp.br \\
-\textbf{257748} &             breno rivelino fima castro &                  50.0 &        7.14 &        5.31 &       93.81 &                      7.0 &  b257748@dac.unicamp.br \\
-\textbf{232568} &                 caio cimino de almeida &                  70.0 &           - &        2.65 &       54.87 &                      5.0 &  c232568@dac.unicamp.br \\
-\textbf{233566} &                 diego tabacof labriola &                  30.0 &        0.00 &        0.00 &       91.15 &                      7.0 &  d233566@dac.unicamp.br \\
-\textbf{215626} &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &  f215626@dac.unicamp.br \\
-\textbf{91108 } &                 felipe eboli sotorilli &                     - &        1.79 &        0.00 &       77.88 &                        - &   f91108@dac.unicamp.br \\
-\textbf{234311} &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &       92.92 &                      5.0 &  f234311@dac.unicamp.br \\
-\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &       76.11 &                      3.0 &  g216397@dac.unicamp.br \\
-\textbf{197474} &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &       51.33 &                      5.0 &  g197474@dac.unicamp.br \\
-\textbf{234982} &                 gabriel pereira santos &                   0.0 &           - &       13.27 &        0.00 &                      0.0 &  g234982@dac.unicamp.br \\
-\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &        0.00 &                      5.0 &  g235042@dac.unicamp.br \\
-\textbf{197724} &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &       74.34 &                      5.0 &  g197724@dac.unicamp.br \\
-\textbf{217350} &       guilherme yoshio agata domingues &                  30.0 &           - &           - &           - &                      0.0 &  g217350@dac.unicamp.br \\
-\textbf{174154} &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &       16.81 &                      0.0 &  g174154@dac.unicamp.br \\
-\textbf{237534} &         joao mateus rodrigues da silva &                  30.0 &           - &           - &           - &                      3.0 &  j237534@dac.unicamp.br \\
-\textbf{237856} &        joão vitor dos santos rodrigues &                  50.0 &        1.79 &        0.00 &       91.15 &                      5.0 &  j237856@dac.unicamp.br \\
-\textbf{199967} &                   jonas pereira cintra &                  70.0 &        0.00 &        3.54 &       82.30 &                      7.0 &  j199967@dac.unicamp.br \\
-\textbf{103034} &  leonardo augusto de oliveira piovesan &                  50.0 &        0.00 &        0.00 &       93.81 &                      5.0 &  l103034@dac.unicamp.br \\
-\textbf{172577} &                   lucas azevedo soares &                  50.0 &        2.68 &        5.31 &       14.16 &                      7.0 &  l172577@dac.unicamp.br \\
-\textbf{159866} &              marcela chenfel dos anjos &                  50.0 &        0.89 &        0.00 &       91.15 &                      5.0 &  m159866@dac.unicamp.br \\
-\textbf{221896} &               mariana sayuri silva doi &                  70.0 &       34.82 &        0.88 &       18.58 &                     10.0 &  m221896@dac.unicamp.br \\
-\textbf{257876} &    maryana beatriz ventura de carvalho &                 100.0 &       67.86 &        0.88 &       93.81 &                     10.0 &  m257876@dac.unicamp.br \\
-\textbf{242087} &                          miguel razera &                   0.0 &        0.89 &        1.77 &        0.00 &                        - &  m242087@dac.unicamp.br \\
-\textbf{242328} &    natalia kimberlle tavares imperiano &                  50.0 &           - &           - &        0.88 &                      7.0 &  n242328@dac.unicamp.br \\
-\textbf{147614} &          pedro augusto de almeida rosa &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &  p147614@dac.unicamp.br \\
-\textbf{176104} &              rafael da silva tomasella &                   0.0 &           - &           - &           - &                        - &  r176104@dac.unicamp.br \\
-\textbf{205149} &                 raphaela freitas souza &                 100.0 &           - &           - &           - &                      0.0 &  r205149@dac.unicamp.br \\
-\textbf{205151} &               raphaela prado francisco &                   0.0 &        0.89 &       47.79 &        4.42 &                      7.0 &  r205151@dac.unicamp.br \\
-\textbf{244207} &                 sanny alves dos santos &                  70.0 &        0.89 &        0.00 &        0.00 &                      7.0 &  s244207@dac.unicamp.br \\
-\textbf{158425} &                           tales alonso &                  50.0 &        0.89 &       61.95 &       61.06 &                      7.0 &  t158425@dac.unicamp.br \\
-\textbf{257932} &              thaís monello de oliveira &                 100.0 &        0.89 &        0.00 &       30.09 &                      7.0 &  t257932@dac.unicamp.br \\
-\textbf{177964} &               victor hugo alves duarte &                  70.0 &        0.00 &        0.00 &        0.00 &                      5.0 &  v177964@dac.unicamp.br \\
-\textbf{245099} &                            victor maia &                  50.0 &       16.07 &       53.98 &       70.80 &                      7.0 &  v245099@dac.unicamp.br \\
-\textbf{206806} &            vinicius jeronimo capodalio &                  50.0 &        0.00 &        7.08 &        2.65 &                      0.0 &  v206806@dac.unicamp.br \\
-\textbf{225851} &                william de sousa rabelo &                  50.0 &           - &           - &           - &                      0.0 &  w225851@dac.unicamp.br \\
-\end{longtable}
-\end{landscape}\end{center}
+| None |
 #+end_export
 
 
@@ -655,29 +494,7 @@ print(grupos.to_latex(caption="Resultado sorteio das atas - Seminários"))
 
 #+RESULTS:
 #+begin_export latex
-\begin{table}
-\centering
-\caption{Resultado sorteio das atas - Seminários}
-\begin{tabular}{ll}
-\toprule
-{} & Resultado \\
-Grupos   &           \\
-\midrule
-Grupo 1  &     Ata 6 \\
-Grupo 2  &     Ata 3 \\
-Grupo 3  &    Ata 10 \\
-Grupo 4  &    Ata 12 \\
-Grupo 5  &     Ata 8 \\
-Grupo 6  &    Ata 11 \\
-Grupo 7  &     Ata 5 \\
-Grupo 8  &     Ata 1 \\
-Grupo 9  &     Ata 2 \\
-Grupo 10 &     Ata 9 \\
-Grupo 11 &     Ata 7 \\
-Grupo 12 &     Ata 4 \\
-\bottomrule
-\end{tabular}
-\end{table}
+| None |
 #+end_export
 
 *** TODO Selecionar Atas e criar map para substituição
@@ -690,3 +507,4 @@ df.to_excel(f'./output/CE342_{Turma}.xlsx')
 #+END_SRC
 
 #+RESULTS:
+: None
