Correções resenhas. IV Escola AKB.

--- a/Materias/2S2020/PED_CE342/Turma_A/212883.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/212883.org
@@ -59,3 +59,20 @@ Em seguida, é apresentada a TQM. No entanto, pouco é dito sobre suas hipótese
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingindo minimamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido parcialmente
+:TURNITIN: Pré-seleção
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
