--- a/Materias/2S2020/PED_CE342/Turma_A/213731.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/213731.org
@@ -55,3 +55,19 @@ Adiante, é discutida a curva de Phillips Aceleracionista. Um adendo: cuidado ao
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
