--- a/Materias/2S2020/PED_CE342/Turma_A/232796.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/232796.org
@@ -52,3 +52,19 @@ Adiante, ao expor a curva de Phillips ampliada, corretamente relacionou a estabi
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN: Pré-Seleção
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
