--- a/Materias/2S2020/PED_CE342/Turma_A/238414.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/238414.org
@@ -56,3 +56,19 @@ No parágrafo de abertura, corretamente coloca o monetarismo enquanto contrapont
 ** Comentários individuais
 
    Foram includos no documento enviado. Vale pontuar que foi sinalizado um trecho como plágio.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
