--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-16 seg 17:05
+% Created 2020-11-23 seg 09:49
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,7 +38,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:orgcadb620}
+\label{sec:org79daf25}
 
 \begin{center}
 \begin{longtable}{lr}
@@ -95,20 +95,20 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{center}
 
 \subsection{Notas}
-\label{sec:org06f12cb}
+\label{sec:org9869720}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
 
 \subsection{Notas e presença}
-\label{sec:org4c5993c}
+\label{sec:org7160a6e}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
 
 \section{Novos Clássicos}
-\label{sec:orgb5ded09}
+\label{sec:orge079805}
 
 \begin{itemize}
 \item[{$\square$}] Computar notas Forms
@@ -168,19 +168,19 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{longtable}
 \end{center}
 \subsection{Notas}
-\label{sec:org01e198a}
+\label{sec:orgdb4a9c6}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
 \end{center}
 \subsection{Notas e Presença}
-\label{sec:orgb1d336e}
+\label{sec:org2cf47e3}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:org2fe8518}
+\label{sec:orgbbbe2e9}
 \subsubsection{Sorteio}
-\label{sec:org53205d9}
+\label{sec:org34b4a5c}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["216397", "235042"]
@@ -203,7 +203,7 @@ resultado
 \end{minted}
 
 \begin{verbatim}
-RA Sorteados
+   RA Sorteados
 1        103034
 2        199967
 3        205151
@@ -222,7 +222,7 @@ RA Sorteados
 
 
 \subsubsection{Resultado Turnitin \textit{<2020-11-14 sáb>}}
-\label{sec:org8e40c94}
+\label{sec:org5235fc5}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -250,21 +250,21 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:org5a9160b}
+\label{sec:org749c03f}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
 
 \item Atualizando notas
-\label{sec:org5186c97}
+\label{sec:org188f4bb}
 \end{enumerate}
 
 \subsection{Questões}
-\label{sec:orgbd2b8b3}
+\label{sec:orgbe6801c}
 
 
 \subsubsection{Importando pacotes e funções}
-\label{sec:orgb939de2}
+\label{sec:org8204940}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
@@ -274,7 +274,7 @@ RA & Grau de semelhança\\
 
 
 \section{Lista de presença e notas}
-\label{sec:org3b2c808}
+\label{sec:org7433acb}
 \begin{center}\begin{landscape}
 \small
 \setlength\LTleft{0pt}
@@ -335,9 +335,9 @@ RA & Grau de semelhança\\
 
 
 \section{Seminários}
-\label{sec:org0959b4f}
+\label{sec:orgc3ebe50}
 \subsection{Sorteio}
-\label{sec:org815c0cd}
+\label{sec:org7d71d1a}
 \begin{table}
 \centering
 \caption{Resultado sorteio das atas - Seminários}
@@ -363,5 +363,5 @@ Grupo 12 &     Ata 4 \\
 \end{table}
 
 \subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituição}
-\label{sec:org8363e9c}
+\label{sec:org0cd55a7}
 \end{document}
