--- a/Materias/2S2020/PED_CE342/Turma_A/199735.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/199735.org
@@ -35,3 +35,35 @@
 ** Comentários individuais 
 
 No início de sua resenha você contextualizou bem os monetaristas enquanto contraponto ao keynesianismo ortodoxo. Como havia me mandado e-mail pedindo para que pude-se ultrapassar o limite de páginas, te aconselho a encurtar tais contextualizações. Apesar de correta, te distanciou do objetivo da resenha. Ao pontuar a importância da política monetária e fiscal, coloca ambas em pé de igualdade sendo que os monetaristas priorizavam a primeira em detrimento da última (via regras monetárias somente). Quando discute a estabilidade da demanda por moeda, corretamente pontua que esta depende de um conjunto restrito de variáveis. No entanto, da forma que escreveu dá a entender que explica tal estabilidade por conta desse número de parâmetros. Não é este o caso. A demanda por moeda é estável por conta da estabilidade desses determinantes e não pela sua quantidade. Logo em seguida escreve o porquê da defesa de regras monetárias de acordo com essa escola. Seu argumento poderia ser melhor estruturado. Neste ponto caberia antecipar a discussão da taxa natural de desemprego e expectativas adaptativas. Além disso, em vários momentos parece que está usando uma argumentação Keynesiana (expansão da demanda gera renda) para explicar alguns resultados monetaristas. Para exemplificar: expansão dos gastos do governo (ao gerar expansão da base monetária) geraria inflação e não renda. Os efeitos reais dessa expansão são resultado da ilusão monetária e não da expansão da renda. Nos parágrafos e página seguinte, são apresentados vários conceitos cuja descrição está pouco clara. Dá para notar que leu os conteúdos indicados, mas poderia melhorar na argumentação.
+
+* Resenha 2: Novos Clássicos                                        :private:
+:PROPERTIES:
+:TAREFA:
+:OBJETIVO:
+:ARGUMENTO:
+:CONCEITOS:
+:DESENVOLVIMENTO:
+:CONCLUSAO:
+:CLAREZA:
+:NOTA:
+:END:
+
+** Comentários individuais
+
+Resenha não foi entregue.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
