--- a/Materias/2S2020/PED_CE342/Turma_A/212900.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/212900.org
@@ -62,3 +62,19 @@ Adiante é mencionada a retomada da TQM pelo monetarismo. Cabe aqui a menção d
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
