--- a/Materias/2S2020/PED_CE342/Turma_A/218090.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/218090.org
@@ -91,3 +91,20 @@ Apesar de curtos, seus dois primeiros parágrafos de aberturam possuem informaç
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido totalmente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido totalmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
