--- a/Materias/2S2020/PED_CE342/Turma_A/219613.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/219613.org
@@ -50,3 +50,19 @@ Corretamente situa o keynesianismo (ortodoxo) enquanto escola predominante pré-
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
