--- a/Materias/2S2020/PED_CE342/Turma_A/231898.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/231898.org
@@ -52,3 +52,19 @@ Adiante, são mencionados os argumentos contra a discricionariedade da política
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN: Pré-Seleção
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
