--- a/Materias/2S2020/PED_CE342/Turma_A/233335.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/233335.org
@@ -53,3 +53,19 @@ No parágrafo seguinte é afirmado que a moeda é neutra no longo prazo. No enta
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN: Pré-Seleção
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
