--- a/Materias/2S2020/PED_CE342/Turma_A/206883.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/206883.org
@@ -51,3 +51,20 @@ Não entregue conforme as instruções.
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido totalmente
+:CONCEITOS: Atingido totalmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
