--- a/Materias/2S2020/PED_CE342/Turma_A/219907.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/219907.org
@@ -50,3 +50,19 @@ Em seus dois parágrafos de abertura, é corretamente pontuada a contribuição 
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+   :PROPERTIES:
+   :TAREFA:   Resenha 3
+   :OBJETIVO: Atingido totalmente
+   :ARGUMENTO: Atingido totalmente
+   :CONCEITOS: Atingido totalmente
+   :DESENVOLVIMENTO: Atingido satisfatoriamente
+   :CONCLUSAO: Atingido satisfatoriamente
+   :CLAREZA:  Atingido totalmente
+   :NOTA:     Atingido totalmente
+   :TURNITIN:
+   :END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
