--- a/Materias/2S2020/PED_CE342/Turma_A/222615.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/222615.org
@@ -51,3 +51,20 @@ Em seu parágrafo de abertura, corretamente contextualizou o monetarismo enquant
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido satisfatoriamente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
