--- a/Materias/2S2020/PED_CE342/Turma_A/240409.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/240409.org
@@ -55,3 +55,19 @@ Em seus parágrafos de abertura, destacou corretamente as implicações da escol
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: satisfatoriamente
+:ARGUMENTO: satisfatoriamente
+:CONCEITOS: satisfatoriamente
+:DESENVOLVIMENTO: parcialmente
+:CONCLUSAO: satisfatoriamente
+:CLAREZA:  satisfatoriamente
+:NOTA:     satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
