--- a/Materias/2S2020/PED_CE342/Turma_C/091108.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/091108.org
@@ -35,3 +35,20 @@
 ** Comentários individuais 
 
 No início da resenha, pontuou a principal proposição do monetarismo, bem como alguns de seus fundamentos teóricos. Em seguida, afirma que o estoque de moeda não afeta o nível de emprego e renda em função de sua neutralidade. Essa construção é quase tautológica. Além disso, poderia ter argumentado melhor o porquê da moeda ser neutra (não é um pressuposto, mas sim um resultado). Em seguida, destaca a importância da TQM. No parágrafo seguinte, apresentou corretamente o conceito de taxa natural de desemprego. Adiante, quando trata da ilusão monetária, a associa ao distanciamento entre a taxa efetiva de desemprego e a natural. Neste ponto, poderia ter descrito esse conceito. Mais a frente descreve partes dos encadeamentos lógicos deste conceito sem o definir. Ao fim, apresenta corretamente a TQM, mas tal discussão esta desassociada do resto da resenha. Dada a importância desta teoria na construção do argumento monetarista, poderia ter antecipado essa discussão.
+
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingindo minimamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
