--- a/Materias/2S2020/PED_CE342/Turma_C/221896.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/221896.org
@@ -51,3 +51,20 @@ Em seu parágrafo de abertura, destaca corretamente a principal proposição de 
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 3: Novos Keynesianos :private:
+   :PROPERTIES:
+   :TAREFA:   Resenha 3
+   :OBJETIVO: Atingido totalmente
+   :ARGUMENTO: Atingido totalmente
+   :CONCEITOS: Atingido totalmente
+   :DESENVOLVIMENTO: Atingido totalmente
+   :CONCLUSAO: Atingido satisfatoriamente
+   :CLAREZA:  Atingido satisfatoriamente
+   :NOTA:     Atingido totalmente
+   :TURNITIN:
+   :END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
