--- a/Materias/2S2020/PED_CE342/Turma_C/230645.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/230645.org
@@ -51,3 +51,20 @@ Em seu parágrafo de abertura, corretamente pontuou a principal implicação do 
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingindo minimamente
+:DESENVOLVIMENTO: Atingindo minimamente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingindo minimamente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. 
