--- a/Materias/2S2020/PED_CE342/Turma_C/235042.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/235042.org
@@ -51,3 +51,20 @@
 ** Comentários individuais
 
    Foram includos no documento enviado. Foram sinalizados 5 trechos como plagio.
+
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
