--- a/Materias/2S2020/PED_CE342/Turma_C/242328.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/242328.org
@@ -50,3 +50,20 @@ Em seus parágrafos iniciais, contextualizou bem o texto a ser resenhado. Ao apr
 ** Comentários individuais
 
    Foram includos no documento enviado.
+
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
