--- a/Materias/2S2020/PED_CE342/Turma_C/257748.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/257748.org
@@ -43,3 +43,20 @@ Em seguida, coloca que a recomendação de regras monetárias se dá pela tentat
 Ao fim, quando discute as implicações do monetarismo, pontua a neutralidade da moeda no longo prazo, mas nada é dito a respeito do porquê deste resultado. Além disso, o monetarismo não implica impossibilidade do ativismo da política econômica. A principal recomendação é que a expansão monetária deve ser igual a taxa de crescimento da economia para que a taxa de inflação não seja persistentemente crescente. Dentre as recomendações de ativismo da política econômica, tem-se a ênfase em fatores do lado da oferta tal como desregulamentação, reestruturação de alguns mercados e etc. Não há, de um ponto de vista teórico, algo que impeça gastos sociais desde que seja compatível com as regras de expansão monetárias. Os tipos de gasto que você elencou são sim pouco indicados por esses autores, mas por outros motivos (ontológicos e metodológicos (individualismo principalmente)). 
 
 No parágrafo final, é corretamente colocada recomendação de política econômica dessa escola. No entanto, a partir de sua resenha não estão claros os encadeamentos lógicos e teóricos para se obter este resultado.
+
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
