--- a/Materias/2S2020/PED_CE342/Turma_A/239052.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/239052.org
@@ -49,4 +49,20 @@ No início de sua resenha, corretamente pontuou a proposição monetarista para 
 
 ** Comentários individuais
 
-   Foram includos no documento enviado.
+   Foram includos no documento enviado
+* Resenha 3: Novos Keynesianos :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido satisfatoriamente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido totalmente
+:CONCLUSAO: Atingido satisfatoriamente
+:CLAREZA:  Atingido totalmente
+:NOTA:     Atingido satisfatoriamente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
