--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.org
@@ -74,8 +74,8 @@ def importar_ext(Turma=Turma, data="2020-10-19", prefix='.', rows=3):
 
 #+RESULTS:
 
-** Merge e exportação
-   
+** Merge
+
 #+BEGIN_SRC python
 monetaristas = pd.read_csv(
     #    full_path +
@@ -99,6 +99,15 @@ nv_classicos.drop(["Endereço de e-mail"], axis="columns", inplace=True)
 nv_classicos.set_index("RA", inplace=True)
 nv_classicos.columns = ["Resenha Novos Clássicos"]
 
+nv_keynesianos = pd.read_csv(
+    #    full_path +
+    "."
+    + "/Notas/NovosKeynesianos.csv"
+)[["Endereço de e-mail", "Nota"]]
+nv_keynesianos["RA"] = [i[1:7] for i in nv_keynesianos["Endereço de e-mail"]]
+nv_keynesianos.drop(["Endereço de e-mail"], axis="columns", inplace=True)
+nv_keynesianos.set_index("RA", inplace=True)
+nv_keynesianos.columns = ["Resenha Novos Keynesianos"]
 
 df = (
     min_df.reset_index()
@@ -118,8 +127,10 @@ df = (
     .set_index("RA")
     .join(importar_ext(Turma=Turma, data="2020-11-16"), how="left", on="Nome")
     .join(importar_ext(Turma=Turma, data="2020-11-23"), how="left", on="Nome")
+    .reset_index()
+    .merge(nv_keynesianos.reset_index(), how="left")
+    .set_index("RA")
 )
-
 df["Email"] = [
     df["Nome"][i][0] + str(df.index[i]) + "@dac.unicamp.br"
     for i in range(len(df.index))
@@ -127,6 +138,7 @@ df["Email"] = [
 #+END_SRC
 
 #+RESULTS:
+
 
 * Monetaristas
 
@@ -148,6 +160,68 @@ print('\end{center}')
 #+END_SRC
 
 #+RESULTS: Monetaristas
+#+begin_export latex
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Monetaristas}\\
+\toprule
+{} &  Resenha Monetaristas \\
+\textbf{RA    } &                       \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{212883} &                  50.0 \\
+\textbf{212900} &                  50.0 \\
+\textbf{231302} &                  70.0 \\
+\textbf{231732} &                   0.0 \\
+\textbf{213360} &                  70.0 \\
+\textbf{231898} &                  70.0 \\
+\textbf{213731} &                  70.0 \\
+\textbf{232395} &                  30.0 \\
+\textbf{232796} &                  70.0 \\
+\textbf{233335} &                  50.0 \\
+\textbf{233747} &                  70.0 \\
+\textbf{255207} &                  50.0 \\
+\textbf{216459} &                   0.0 \\
+\textbf{235951} &                  30.0 \\
+\textbf{236276} &                   0.0 \\
+\textbf{218090} &                  70.0 \\
+\textbf{255241} &                  50.0 \\
+\textbf{237618} &                  70.0 \\
+\textbf{199735} &                  50.0 \\
+\textbf{218975} &                  70.0 \\
+\textbf{238414} &                  70.0 \\
+\textbf{219613} &                  50.0 \\
+\textbf{219907} &                 100.0 \\
+\textbf{239052} &                  70.0 \\
+\textbf{220194} &                  70.0 \\
+\textbf{201326} &                  50.0 \\
+\textbf{156242} &                   0.0 \\
+\textbf{240317} &                  30.0 \\
+\textbf{240409} &                  70.0 \\
+\textbf{221515} &                  50.0 \\
+\textbf{255293} &                  30.0 \\
+\textbf{241430} &                  50.0 \\
+\textbf{222315} &                  50.0 \\
+\textbf{184528} &                  50.0 \\
+\textbf{222615} &                  70.0 \\
+\textbf{186966} &                   0.0 \\
+\textbf{244321} &                  50.0 \\
+\textbf{244379} &                  50.0 \\
+\textbf{187323} &                 100.0 \\
+\textbf{206194} &                  50.0 \\
+\textbf{245212} &                 100.0 \\
+\textbf{206883} &                   0.0 \\
+\textbf{245459} &                  70.0 \\
+\end{longtable}
+\end{center}
+#+end_export
 #+begin_export latex
 \begin{center}
 \begin{longtable}{lr}
@@ -307,6 +381,7 @@ plt.close()
 #+RESULTS:
 [[file:./figs/monetaristas.png]]
 [[file:./figs/monetaristas.png]]
+[[file:./figs/monetaristas.png]]
 
 *** Notas e presença
 
@@ -329,6 +404,7 @@ plt.close()
 #+END_SRC
 
 #+RESULTS:
+[[file:./figs/monetaristas_presenca.png]]
 [[file:./figs/monetaristas_presenca.png]]
 [[file:./figs/monetaristas_presenca.png]]
 
@@ -355,6 +431,68 @@ print('\end{center}')
 #+END_SRC
 
 #+RESULTS: NovosCla
+#+begin_export latex
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novos Clássicos}\\
+\toprule
+{} &  Resenha Novos Clássicos \\
+\textbf{RA    } &                          \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{212883} &                      5.0 \\
+\textbf{212900} &                     10.0 \\
+\textbf{231302} &                      5.0 \\
+\textbf{231732} &                        - \\
+\textbf{213360} &                     10.0 \\
+\textbf{231898} &                      5.0 \\
+\textbf{213731} &                     10.0 \\
+\textbf{232395} &                      7.0 \\
+\textbf{232796} &                      5.0 \\
+\textbf{233335} &                      5.0 \\
+\textbf{233747} &                     10.0 \\
+\textbf{255207} &                      0.0 \\
+\textbf{216459} &                        - \\
+\textbf{235951} &                        - \\
+\textbf{236276} &                        - \\
+\textbf{218090} &                     10.0 \\
+\textbf{255241} &                      7.0 \\
+\textbf{237618} &                     10.0 \\
+\textbf{199735} &                      0.0 \\
+\textbf{218975} &                      5.0 \\
+\textbf{238414} &                      0.0 \\
+\textbf{219613} &                      5.0 \\
+\textbf{219907} &                      7.0 \\
+\textbf{239052} &                      7.0 \\
+\textbf{220194} &                      5.0 \\
+\textbf{201326} &                     10.0 \\
+\textbf{156242} &                      5.0 \\
+\textbf{240317} &                      5.0 \\
+\textbf{240409} &                      7.0 \\
+\textbf{221515} &                      5.0 \\
+\textbf{255293} &                      0.0 \\
+\textbf{241430} &                      5.0 \\
+\textbf{222315} &                     10.0 \\
+\textbf{184528} &                      0.0 \\
+\textbf{222615} &                      3.0 \\
+\textbf{186966} &                      0.0 \\
+\textbf{244321} &                      5.0 \\
+\textbf{244379} &                      5.0 \\
+\textbf{187323} &                      7.0 \\
+\textbf{206194} &                      5.0 \\
+\textbf{245212} &                     10.0 \\
+\textbf{206883} &                      3.0 \\
+\textbf{245459} &                      5.0 \\
+\end{longtable}
+\end{center}
+#+end_export
 #+begin_export latex
 \begin{center}
 \begin{longtable}{lr}
@@ -516,6 +654,7 @@ plt.close()
 #+RESULTS:
 [[file:./figs/novosclassicos.png]]
 [[file:./figs/novosclassicos.png]]
+[[file:./figs/novosclassicos.png]]
 *** Notas e Presença
 #+BEGIN_SRC python :results graphics file :file ./figs/novosclassicos_presenca.png
 tmp = df.copy()
@@ -536,6 +675,7 @@ plt.close()
 #+END_SRC
 
 #+RESULTS:
+[[file:./figs/novosclassicos_presenca.png]]
 [[file:./figs/novosclassicos_presenca.png]]
 [[file:./figs/novosclassicos_presenca.png]]
 
@@ -564,6 +704,22 @@ resultado
 #+END_SRC
 
 #+RESULTS:
+#+begin_example
+   RA Sorteados
+1        156242
+2        187323
+3        212900
+4        219613
+5        219907
+6        222615
+7        231302
+8        232796
+9        239052
+10       240409
+11       244321
+12       244379
+13       245459
+#+end_example
 #+begin_example
    RA Sorteados
 1        156242
@@ -650,6 +806,7 @@ plt.close()
 #+RESULTS:
 [[file:./figs/turintin_NvC_fig.png]]
 [[file:./figs/turintin_NvC_fig.png]]
+[[file:./figs/turintin_NvC_fig.png]]
 **** Atualização das notas
 
 #+BEGIN_SRC python
@@ -676,6 +833,7 @@ print(f"Sobreposição das respostas {sum(tmp_idx.duplicated())/len(tmp_idx)}%")
 #+END_SRC
 
 #+RESULTS:
+: Sobreposição das respostas 0.717948717948718%
 : Sobreposição das respostas 0.717948717948718%
 : Sobreposição das respostas 0.717948717948718%
 
@@ -721,6 +879,7 @@ plt.close()
 #+RESULTS:
 [[file:./figs/similarity_forms_1.png]]
 [[file:./figs/similarity_forms_1.png]]
+[[file:./figs/similarity_forms_1.png]]
 
 
 #+BEGIN_SRC python :results table latex
@@ -730,6 +889,16 @@ print(questoes[subset].to_latex())
 #+END_SRC
 
 #+RESULTS:
+#+begin_export latex
+\begin{tabular}{llllrr}
+\toprule
+{} &     Q1 &     Q2 &                                      Justificativa &  Nota\_1 &  Nota\_2 \\
+Carimbo de data/hora         &        &        &                                                    &         &         \\
+\midrule
+2020/11/09 10:09:49 AM GMT-3 &  Falso &  Falso &  Se os agentes antecipam a expansão monetária, ... &       1 &       1 \\
+\bottomrule
+\end{tabular}
+#+end_export
 #+begin_export latex
 \begin{tabular}{llllrr}
 \toprule
@@ -761,7 +930,7 @@ Carimbo de data/hora         &        &        &                                
 ** Notas                                                             :ignore:
 
 #+NAME:NovosKey
-#+BEGIN_SRC python :results table latex :eval no
+#+BEGIN_SRC python :results table latex 
 print('\\begin{center}')
 print(
     df[["Resenha Novos Keynesianos"]].to_latex(
@@ -772,6 +941,70 @@ print(
     ),end='')
 print('\end{center}')
 #+END_SRC
+
+#+RESULTS: NovosKey
+#+begin_export latex
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novos Keynesianos}\\
+\toprule
+{} &  Resenha Novos Keynesianos \\
+\textbf{RA    } &                            \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{212883} &                        5.0 \\
+\textbf{212900} &                        7.0 \\
+\textbf{231302} &                        0.0 \\
+\textbf{231732} &                          - \\
+\textbf{213360} &                        0.0 \\
+\textbf{231898} &                        7.0 \\
+\textbf{213731} &                        7.0 \\
+\textbf{232395} &                        7.0 \\
+\textbf{232796} &                        7.0 \\
+\textbf{233335} &                        5.0 \\
+\textbf{233747} &                        7.0 \\
+\textbf{255207} &                        0.0 \\
+\textbf{216459} &                          - \\
+\textbf{235951} &                          - \\
+\textbf{236276} &                          - \\
+\textbf{218090} &                       10.0 \\
+\textbf{255241} &                        3.0 \\
+\textbf{237618} &                       10.0 \\
+\textbf{199735} &                        5.0 \\
+\textbf{218975} &                        0.0 \\
+\textbf{238414} &                        7.0 \\
+\textbf{219613} &                        5.0 \\
+\textbf{219907} &                       10.0 \\
+\textbf{239052} &                        7.0 \\
+\textbf{220194} &                        0.0 \\
+\textbf{201326} &                       10.0 \\
+\textbf{156242} &                        7.0 \\
+\textbf{240317} &                        0.0 \\
+\textbf{240409} &                        7.0 \\
+\textbf{221515} &                        0.0 \\
+\textbf{255293} &                        0.0 \\
+\textbf{241430} &                        5.0 \\
+\textbf{222315} &                        0.0 \\
+\textbf{184528} &                        0.0 \\
+\textbf{222615} &                        7.0 \\
+\textbf{186966} &                        0.0 \\
+\textbf{244321} &                        0.0 \\
+\textbf{244379} &                        0.0 \\
+\textbf{187323} &                        0.0 \\
+\textbf{206194} &                        3.0 \\
+\textbf{245212} &                        0.0 \\
+\textbf{206883} &                        7.0 \\
+\textbf{245459} &                        0.0 \\
+\end{longtable}
+\end{center}
+#+end_export
 
 #+RESULTS: NovosCla
 #+begin_export latex
@@ -839,7 +1072,7 @@ print('\end{center}')
 
 ** Gráficos                                                          :ignore:
 *** Notas   
-#+BEGIN_SRC python :results graphics file :file ./figs/novoskeynesianos.png :eval no
+#+BEGIN_SRC python :results graphics file :file ./figs/novoskeynesianos.png 
 fig, ax = plt.subplots(1,2, figsize=(8,5), sharey=True)
 sns.distplot(df['Resenha Novos Keynesianos'], hist=True, kde=True, 
              bins=int(10), color = 'darkblue', 
@@ -871,9 +1104,10 @@ plt.close()
 #+END_SRC
 
 #+RESULTS:
+[[file:./figs/novoskeynesianos.png]]
 [[file:./figs/novosclassicos.png]]
 *** Notas e Presença
-#+BEGIN_SRC python :results graphics file :file ./figs/novoskeynesianos_presenca.png :eval no
+#+BEGIN_SRC python :results graphics file :file ./figs/novoskeynesianos_presenca.png 
 tmp = df.copy()
 
 tmp["Média presença"] = tmp[["2020-10-19", "2020-10-26", "2020-11-09"]].mean(axis=1)
@@ -892,13 +1126,14 @@ plt.close()
 #+END_SRC
 
 #+RESULTS:
-[[file:./figs/novosclassicos_presenca.png]]
+[[file:./figs/novoskeynesianos_presenca.png]]
+
 
 ** Verificação de plágio por amostragem
 *** Sorteio
     
-#+BEGIN_SRC python :results output :exports both :eval no
-pre_selecionados = ["212883", "231898", "232796", "233335"]
+#+BEGIN_SRC python :results output :exports both 
+pre_selecionados = ["212883", "231898", "232796", "233335", "206194"]
 alunos = df.shape[0]
 sample = 0.3
 amostra = round(alunos * sample)
@@ -924,6 +1159,22 @@ resultado
 #+begin_example
    RA Sorteados
 1        156242
+2        199735
+3        206883
+4        212900
+5        213731
+6        218090
+7        219613
+8        222615
+9        232395
+10       237618
+11       238414
+12       240409
+13       241430
+#+end_example
+#+begin_example
+   RA Sorteados
+1        156242
 2        187323
 3        212900
 4        219613
@@ -941,7 +1192,7 @@ resultado
 *** Resultado Turnitin
 
 #+CAPTION: Resumo relatório de origilidadade
-#+NAME:TurnitinNvC
+#+NAME:TurnitinNvK
 |--------+--------------------|
 |     RA | Grau de semelhança |
 |--------+--------------------|
@@ -962,7 +1213,7 @@ resultado
 |--------+--------------------|
 
 **** Gráfico
-#+BEGIN_SRC python :var turnitin=TurnitinNvC :results file graphics :file ./figs/turintin_NvC_fig.png
+#+BEGIN_SRC python :var turnitin=TurnitinNvC :results file graphics :file ./figs/turintin_NvK_fig.png
 turnitin = pd.DataFrame(
     turnitin[1:],
     columns=["RA", "Grau de Semelhança"],
@@ -984,13 +1235,13 @@ ax.text(-0.15, 10, f'$\mu = ${mu}', fontsize=12)
 ax.text(-0.15, 9.5, f'$\sigma = ${sigma}', fontsize=12)
 
 sns.despine()
-plt.savefig('./figs/turintin_NvC_fig.png')
+plt.savefig('./figs/turintin_NvK_fig.png')
 plt.close()
 #+END_SRC
 
 #+RESULTS:
-[[file:./figs/turintin_NvC_fig.png]]
-[[file:./figs/turintin_NvC_fig.png]]
+[[file:./figs/turintin_NvK_fig.png]]
+
 **** Atualização das notas
 
 #+BEGIN_SRC python
@@ -1000,97 +1251,6 @@ df.loc["238414", "Resenha Novos Clássicos"] = 5.0
 #+END_SRC
 
 #+RESULTS:
-** Questões
-
-*** Importando respostas                                             :ignore:
-
-#+BEGIN_SRC python :eval no
-questoes = pd.read_csv(
-    './Questoes/NovosClassicosNCM.csv',
-    index_col=[0]
-)
-questoes.columns = ["Q1", "Q2", "Justificativa"]
-questoes["Nota_1"] = [int(res=="Falso") for res in questoes["Q1"]]
-questoes["Nota_2"] = [int(res=="Falso") for res in questoes["Q2"]]
-tmp_idx = pd.Index([i[:16] for i in questoes.index.tolist()])
-print(f"Sobreposição das respostas {sum(tmp_idx.duplicated())/len(tmp_idx)}%")
-#+END_SRC
-
-#+RESULTS:
-: Sobreposição das respostas 0.717948717948718%
-
-*** Importando pacotes e funções
-
-#+BEGIN_SRC python :results graphics file :file ./figs/similarity_forms_1.png :eval no
-import string
-from sklearn.metrics.pairwise import cosine_similarity
-from sklearn.feature_extraction.text import CountVectorizer
-from nltk.corpus import stopwords
-stopwords = stopwords.words('portuguese')
-
-sentences = questoes["Justificativa"]
-
-def clean_string(text):
-    text = ''.join([word for word in text if word not in string.punctuation])
-    text = text.lower()
-    text = ' '.join([word for word in text.split() if word not in stopwords])
-
-    return text
-
-cleaned = list(map(clean_string, sentences))
-vectorizer = CountVectorizer().fit_transform(cleaned)
-vectors = vectorizer.toarray()
-csim = cosine_similarity(vectors)
-
-
-def coisine_sim_vectors(vec1, vec2):
-    vec1 = vec1.reshape(1,-1)
-    vec2 = vec2.reshape(1,-1)
-    return coisine_similarity(vec1, vec2)[0][0]
-
-
-plt.matshow(csim);
-plt.colorbar()
-plt.title(f'Matriz de similaridade das justificativas\n Turma {Turma}\n')
-plt.tight_layout()
-plt.savefig('./figs/similarity_forms_2.png')
-plt.close()
-
-#+END_SRC
-
-#+RESULTS:
-[[file:./figs/similarity_forms_1.png]]
-
-
-#+BEGIN_SRC python :results table latex
-triang  = np.triu(csim, k=0).tolist()
-subset = [i > 0.7 and i < 1.0 for i in triang[1]]
-print(questoes[subset].to_latex())
-#+END_SRC
-
-#+RESULTS:
-#+begin_export latex
-\begin{tabular}{llllrr}
-\toprule
-{} &     Q1 &     Q2 &                                      Justificativa &  Nota\_1 &  Nota\_2 \\
-Carimbo de data/hora         &        &        &                                                    &         &         \\
-\midrule
-2020/11/09 10:09:49 AM GMT-3 &  Falso &  Falso &  Se os agentes antecipam a expansão monetária, ... &       1 &       1 \\
-\bottomrule
-\end{tabular}
-#+end_export
-#+begin_export latex
-\begin{tabular}{llllrr}
-\toprule
-{} &     Q1 &     Q2 &                                      Justificativa &  Nota\_1 &  Nota\_2 \\
-Carimbo de data/hora         &        &        &                                                    &         &         \\
-\midrule
-2020/11/09 10:09:49 AM GMT-3 &  Falso &  Falso &  Se os agentes antecipam a expansão monetária, ... &       1 &       1 \\
-\bottomrule
-\end{tabular}
-#+end_export
-
-
 * Lista de presença e notas
 ** Lista de chamada com nota das resenhas                            :ignore:
 #+NAME:Lista
@@ -1109,6 +1269,71 @@ print('\end{landscape}\end{center}')
 #+END_SRC
 
 #+RESULTS: Lista
+#+begin_export latex
+\begin{center}\begin{landscape}
+\small
+\setlength\LTleft{0pt}
+\setlength\LTright{0pt}
+\begin{longtable}{llrrrrrrrrl}
+\caption{Lista de presença e de notas}\label{lista}\\
+\toprule
+{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &                   Email \\
+\textbf{RA    } &                                       &                       &             &             &             &                          &             &             &                            &                         \\
+\midrule
+\endhead
+\midrule
+\multicolumn{11}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &       36.96 &       16.39 &                        5.0 &  a212883@dac.unicamp.br \\
+\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &       64.49 &       81.97 &                        7.0 &  a212900@dac.unicamp.br \\
+\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &        8.70 &       52.46 &                        0.0 &  a231302@dac.unicamp.br \\
+\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &  a231732@dac.unicamp.br \\
+\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &       84.06 &       48.36 &                        0.0 &  a213360@dac.unicamp.br \\
+\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &       10.14 &       54.92 &                        7.0 &  b231898@dac.unicamp.br \\
+\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &        1.45 &       88.52 &                        7.0 &  b213731@dac.unicamp.br \\
+\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &           - &        3.28 &                        7.0 &  b232395@dac.unicamp.br \\
+\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &        2.90 &       82.79 &                        7.0 &  c232796@dac.unicamp.br \\
+\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &        3.62 &       18.03 &                        5.0 &  d233335@dac.unicamp.br \\
+\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &       22.46 &        5.74 &                        7.0 &  e233747@dac.unicamp.br \\
+\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &  f255207@dac.unicamp.br \\
+\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &  g216459@dac.unicamp.br \\
+\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &           - &           - &                          - &  g235951@dac.unicamp.br \\
+\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &           - &           - &                          - &  g236276@dac.unicamp.br \\
+\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &       78.99 &       13.11 &                       10.0 &  i218090@dac.unicamp.br \\
+\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &       68.84 &       59.02 &                        3.0 &  i255241@dac.unicamp.br \\
+\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &        2.90 &       58.20 &                       10.0 &  j237618@dac.unicamp.br \\
+\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &       79.71 &        1.64 &                        5.0 &  j199735@dac.unicamp.br \\
+\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &       69.57 &       86.89 &                        0.0 &  j218975@dac.unicamp.br \\
+\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      5.0 &       78.26 &        8.20 &                        7.0 &  j238414@dac.unicamp.br \\
+\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &           - &           - &                        5.0 &  k219613@dac.unicamp.br \\
+\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &           - &           - &                       10.0 &  l219907@dac.unicamp.br \\
+\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &       84.06 &       65.57 &                        7.0 &  l239052@dac.unicamp.br \\
+\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &       39.13 &        0.00 &                        0.0 &  l220194@dac.unicamp.br \\
+\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &       84.78 &        4.10 &                       10.0 &  l201326@dac.unicamp.br \\
+\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &           - &       38.52 &                        7.0 &  l156242@dac.unicamp.br \\
+\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &        0.72 &        9.84 &                        0.0 &  l240317@dac.unicamp.br \\
+\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &        3.62 &        4.10 &                        7.0 &  l240409@dac.unicamp.br \\
+\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &       13.04 &        9.02 &                        0.0 &  m221515@dac.unicamp.br \\
+\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &           - &           - &                        0.0 &  m255293@dac.unicamp.br \\
+\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &           - &           - &                        5.0 &  m241430@dac.unicamp.br \\
+\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &        1.45 &       43.44 &                        0.0 &  m222315@dac.unicamp.br \\
+\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &           - &           - &                        0.0 &  m184528@dac.unicamp.br \\
+\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &       31.88 &        0.00 &                        7.0 &  m222615@dac.unicamp.br \\
+\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &  s186966@dac.unicamp.br \\
+\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &       19.57 &       52.46 &                        0.0 &  s244321@dac.unicamp.br \\
+\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &       66.67 &       54.10 &                        0.0 &  s244379@dac.unicamp.br \\
+\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &           - &        0.82 &                        0.0 &  t187323@dac.unicamp.br \\
+\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &       54.35 &        0.00 &                        3.0 &  t206194@dac.unicamp.br \\
+\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &           - &           - &                        0.0 &  v245212@dac.unicamp.br \\
+\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &       23.91 &        0.82 &                        7.0 &  v206883@dac.unicamp.br \\
+\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      0.0 &       69.57 &       57.38 &                        0.0 &  v245459@dac.unicamp.br \\
+\end{longtable}
+\end{landscape}\end{center}
+#+end_export
 #+begin_export latex
 \begin{center}\begin{landscape}
 \small
@@ -1514,6 +1739,31 @@ print(grupos.to_latex(caption="Resultado sorteio das atas - Seminários"))
 #+END_SRC
 
 #+RESULTS:
+#+begin_export latex
+\begin{table}
+\centering
+\caption{Resultado sorteio das atas - Seminários}
+\begin{tabular}{ll}
+\toprule
+{} & Resultado \\
+Grupos   &           \\
+\midrule
+Grupo 1  &     Ata 5 \\
+Grupo 2  &    Ata 11 \\
+Grupo 3  &     Ata 7 \\
+Grupo 4  &    Ata 12 \\
+Grupo 5  &     Ata 9 \\
+Grupo 6  &     Ata 4 \\
+Grupo 7  &    Ata 10 \\
+Grupo 8  &     Ata 3 \\
+Grupo 9  &     Ata 8 \\
+Grupo 10 &     Ata 1 \\
+Grupo 11 &     Ata 6 \\
+Grupo 12 &     Ata 2 \\
+\bottomrule
+\end{tabular}
+\end{table}
+#+end_export
 #+begin_export latex
 \begin{table}
 \centering
