--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-23 seg 15:33
+% Created 2020-11-24 ter 19:06
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,8 +38,68 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:org6af813e}
+\label{sec:org36a27fb}
 
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Monetaristas}\\
+\toprule
+{} &  Resenha Monetaristas \\
+\textbf{RA    } &                       \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{212883} &                  50.0 \\
+\textbf{212900} &                  50.0 \\
+\textbf{231302} &                  70.0 \\
+\textbf{231732} &                   0.0 \\
+\textbf{213360} &                  70.0 \\
+\textbf{231898} &                  70.0 \\
+\textbf{213731} &                  70.0 \\
+\textbf{232395} &                  30.0 \\
+\textbf{232796} &                  70.0 \\
+\textbf{233335} &                  50.0 \\
+\textbf{233747} &                  70.0 \\
+\textbf{255207} &                  50.0 \\
+\textbf{216459} &                   0.0 \\
+\textbf{235951} &                  30.0 \\
+\textbf{236276} &                   0.0 \\
+\textbf{218090} &                  70.0 \\
+\textbf{255241} &                  50.0 \\
+\textbf{237618} &                  70.0 \\
+\textbf{199735} &                  50.0 \\
+\textbf{218975} &                  70.0 \\
+\textbf{238414} &                  70.0 \\
+\textbf{219613} &                  50.0 \\
+\textbf{219907} &                 100.0 \\
+\textbf{239052} &                  70.0 \\
+\textbf{220194} &                  70.0 \\
+\textbf{201326} &                  50.0 \\
+\textbf{156242} &                   0.0 \\
+\textbf{240317} &                  30.0 \\
+\textbf{240409} &                  70.0 \\
+\textbf{221515} &                  50.0 \\
+\textbf{255293} &                  30.0 \\
+\textbf{241430} &                  50.0 \\
+\textbf{222315} &                  50.0 \\
+\textbf{184528} &                  50.0 \\
+\textbf{222615} &                  70.0 \\
+\textbf{186966} &                   0.0 \\
+\textbf{244321} &                  50.0 \\
+\textbf{244379} &                  50.0 \\
+\textbf{187323} &                 100.0 \\
+\textbf{206194} &                  50.0 \\
+\textbf{245212} &                 100.0 \\
+\textbf{206883} &                   0.0 \\
+\textbf{245459} &                  70.0 \\
+\end{longtable}
+\end{center}
 \begin{center}
 \begin{longtable}{lr}
 \caption{Notas das resenhas - Monetaristas}\\
@@ -162,7 +222,10 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{center}
 
 \subsection{Notas}
-\label{sec:org2265db3}
+\label{sec:org84f2813}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
+\end{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
@@ -171,8 +234,11 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{center}
 
 \subsection{Notas e presença}
-\label{sec:org670d3e9}
+\label{sec:org0469e4f}
 
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
+\end{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
@@ -181,7 +247,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{center}
 
 \section{Novos Clássicos}
-\label{sec:orgd8deffa}
+\label{sec:org5c5e869}
 
 \begin{itemize}
 \item[{$\square$}] Identificar respostas das questões (forms)
@@ -308,164 +374,6 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \textbf{245459} &                      5.0 \\
 \end{longtable}
 \end{center}
-\subsection{Notas}
-\label{sec:org00342ef}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
-\end{center}
-\subsection{Notas e Presença}
-\label{sec:orgf42e462}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
-\end{center}
-\subsection{Verificação de plágio por amostragem}
-\label{sec:orgd9a1046}
-\subsubsection{Sorteio}
-\label{sec:org314e404}
-
-\begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
-pre_selecionados = ["238414"]
-alunos = df.shape[0]
-sample = 0.3
-amostra = round(alunos*sample)
-bad_df = df.index.isin(pre_selecionados)
-elegivies = df.loc[~bad_df].query('`Resenha Novos Clássicos` > 0')["Resenha Novos Clássicos"].index.tolist()
-
-
-resultado = np.sort(np.random.choice(
-    a = elegivies,
-    size = amostra,
-    replace = False # Sem repetição
-))
-resultado = pd.DataFrame(resultado)
-resultado.columns = ["RA Sorteados"]
-resultado.index = [i + 1 for i in resultado.index]
-print(resultado)
-resultado
-\end{minted}
-
-\begin{verbatim}
-   RA Sorteados
-1        156242
-2        187323
-3        212900
-4        219613
-5        219907
-6        222615
-7        231302
-8        232796
-9        239052
-10       240409
-11       244321
-12       244379
-13       245459
-\end{verbatim}
-\begin{verbatim}
-   RA Sorteados
-1        156242
-2        187323
-3        212900
-4        219613
-5        219907
-6        222615
-7        231302
-8        232796
-9        239052
-10       240409
-11       244321
-12       244379
-13       245459
-\end{verbatim}
-
-\subsubsection{Resultado Turnitin}
-\label{sec:org05214c2}
-
-\begin{table}[htbp]
-\caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
-\centering
-\begin{tabular}{rl}
-\hline
-RA & Grau de semelhança\\
-\hline
-156242 & 15\%\\
-187323 & 20\%\\
-212900 & 1\%\\
-219613 & 0\%\\
-219907 & 8\%\\
-222615 & 0\%\\
-231302 & 2\%\\
-232795 & 11\%\\
-238414 & 2\%\\
-239052 & 8\%\\
-240409 & 0\%\\
-244321 & 1\%\\
-244379 & 1\%\\
-245459 & 53\%\\
-\hline
-\end{tabular}
-\end{table}
-
-\begin{enumerate}
-\item Gráfico
-\label{sec:org82b6b44}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
-\end{center}
-\item Atualização das notas
-\label{sec:orgc7cdf09}
-\end{enumerate}
-\subsection{Questões}
-\label{sec:org7913193}
-
-\begin{verbatim}
-Sobreposição das respostas 0.717948717948718%
-\end{verbatim}
-
-\subsubsection{Importando pacotes e funções}
-\label{sec:org67b2e10}
-
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
-\end{center}
-
-
-\begin{tabular}{llllrr}
-\toprule
-{} &     Q1 &     Q2 &                                      Justificativa &  Nota\_1 &  Nota\_2 \\
-Carimbo de data/hora         &        &        &                                                    &         &         \\
-\midrule
-2020/11/09 10:09:49 AM GMT-3 &  Falso &  Falso &  Se os agentes antecipam a expansão monetária, ... &       1 &       1 \\
-\bottomrule
-\end{tabular}
-\begin{tabular}{llllrr}
-\toprule
-{} &     Q1 &     Q2 &                                      Justificativa &  Nota\_1 &  Nota\_2 \\
-Carimbo de data/hora         &        &        &                                                    &         &         \\
-\midrule
-2020/11/09 10:09:49 AM GMT-3 &  Falso &  Falso &  Se os agentes antecipam a expansão monetária, ... &       1 &       1 \\
-\bottomrule
-\end{tabular}
-
-\section{Novos Keynesianos}
-\label{sec:org7d111e5}
-
-\begin{itemize}
-\item[{$\square$}] Computar notas
-\item[{$\square$}] Preencher presenhas na tabela da Ana Rosa
-\item[{$\square$}] Sortear turnitin
-\end{itemize}
 \begin{center}
 \begin{longtable}{lr}
 \caption{Notas das resenhas - Novos Clássicos}\\
@@ -527,27 +435,39 @@ Carimbo de data/hora         &        &        &                                
 \end{longtable}
 \end{center}
 \subsection{Notas}
-\label{sec:orgcc33dbf}
+\label{sec:org034f690}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
+\end{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
 \end{center}
 \subsection{Notas e Presença}
-\label{sec:orgee72a31}
+\label{sec:org685e06c}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
+\end{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:org85e9b49}
+\label{sec:org6518a37}
 \subsubsection{Sorteio}
-\label{sec:orgb94b2ec}
+\label{sec:org147a86b}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
-pre_selecionados = []
+pre_selecionados = ["238414"]
 alunos = df.shape[0]
 sample = 0.3
 amostra = round(alunos*sample)
 bad_df = df.index.isin(pre_selecionados)
-elegivies = df.loc[~bad_df].query('`Resenha Novos Keynesianos` > 0')["Resenha Novos Keynesianos"].index.tolist()
+elegivies = df.loc[~bad_df].query('`Resenha Novos Clássicos` > 0')["Resenha Novos Clássicos"].index.tolist()
 
 
 resultado = np.sort(np.random.choice(
@@ -578,9 +498,41 @@ resultado
 12       244379
 13       245459
 \end{verbatim}
+\begin{verbatim}
+   RA Sorteados
+1        156242
+2        187323
+3        212900
+4        219613
+5        219907
+6        222615
+7        231302
+8        232796
+9        239052
+10       240409
+11       244321
+12       244379
+13       245459
+\end{verbatim}
+\begin{verbatim}
+   RA Sorteados
+1        156242
+2        187323
+3        212900
+4        219613
+5        219907
+6        222615
+7        231302
+8        232796
+9        239052
+10       240409
+11       244321
+12       244379
+13       245459
+\end{verbatim}
 
 \subsubsection{Resultado Turnitin}
-\label{sec:orgede21e1}
+\label{sec:orgb246b5a}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -609,7 +561,10 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:org3629137}
+\label{sec:org188537b}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
+\end{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
@@ -617,18 +572,24 @@ RA & Grau de semelhança\\
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
 \item Atualização das notas
-\label{sec:orgea229f7}
+\label{sec:orgc008ff9}
 \end{enumerate}
 \subsection{Questões}
-\label{sec:org769a55f}
+\label{sec:org8ae2943}
 
 \begin{verbatim}
 Sobreposição das respostas 0.717948717948718%
 \end{verbatim}
 
 \subsubsection{Importando pacotes e funções}
-\label{sec:org3a2303f}
+\label{sec:orgfb98384}
 
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
+\end{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
 \end{center}
@@ -650,10 +611,321 @@ Carimbo de data/hora         &        &        &                                
 2020/11/09 10:09:49 AM GMT-3 &  Falso &  Falso &  Se os agentes antecipam a expansão monetária, ... &       1 &       1 \\
 \bottomrule
 \end{tabular}
+\begin{tabular}{llllrr}
+\toprule
+{} &     Q1 &     Q2 &                                      Justificativa &  Nota\_1 &  Nota\_2 \\
+Carimbo de data/hora         &        &        &                                                    &         &         \\
+\midrule
+2020/11/09 10:09:49 AM GMT-3 &  Falso &  Falso &  Se os agentes antecipam a expansão monetária, ... &       1 &       1 \\
+\bottomrule
+\end{tabular}
+
+\section{Novos Keynesianos}
+\label{sec:org3fb3ab7}
+
+\begin{itemize}
+\item[{$\square$}] Computar notas
+\item[{$\square$}] Preencher presenhas na tabela da Ana Rosa
+\item[{$\square$}] Sortear turnitin
+\end{itemize}
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novos Keynesianos}\\
+\toprule
+{} &  Resenha Novos Keynesianos \\
+\textbf{RA    } &                            \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{212883} &                        5.0 \\
+\textbf{212900} &                        7.0 \\
+\textbf{231302} &                        0.0 \\
+\textbf{231732} &                          - \\
+\textbf{213360} &                        0.0 \\
+\textbf{231898} &                        7.0 \\
+\textbf{213731} &                        7.0 \\
+\textbf{232395} &                        7.0 \\
+\textbf{232796} &                        7.0 \\
+\textbf{233335} &                        5.0 \\
+\textbf{233747} &                        7.0 \\
+\textbf{255207} &                        0.0 \\
+\textbf{216459} &                          - \\
+\textbf{235951} &                          - \\
+\textbf{236276} &                          - \\
+\textbf{218090} &                       10.0 \\
+\textbf{255241} &                        3.0 \\
+\textbf{237618} &                       10.0 \\
+\textbf{199735} &                        5.0 \\
+\textbf{218975} &                        0.0 \\
+\textbf{238414} &                        7.0 \\
+\textbf{219613} &                        5.0 \\
+\textbf{219907} &                       10.0 \\
+\textbf{239052} &                        7.0 \\
+\textbf{220194} &                        0.0 \\
+\textbf{201326} &                       10.0 \\
+\textbf{156242} &                        7.0 \\
+\textbf{240317} &                        0.0 \\
+\textbf{240409} &                        7.0 \\
+\textbf{221515} &                        0.0 \\
+\textbf{255293} &                        0.0 \\
+\textbf{241430} &                        5.0 \\
+\textbf{222315} &                        0.0 \\
+\textbf{184528} &                        0.0 \\
+\textbf{222615} &                        7.0 \\
+\textbf{186966} &                        0.0 \\
+\textbf{244321} &                        0.0 \\
+\textbf{244379} &                        0.0 \\
+\textbf{187323} &                        0.0 \\
+\textbf{206194} &                        3.0 \\
+\textbf{245212} &                        0.0 \\
+\textbf{206883} &                        7.0 \\
+\textbf{245459} &                        0.0 \\
+\end{longtable}
+\end{center}
+
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novos Clássicos}\\
+\toprule
+{} &  Resenha Novos Clássicos \\
+\textbf{RA    } &                          \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{212883} &                      5.0 \\
+\textbf{212900} &                     10.0 \\
+\textbf{231302} &                      5.0 \\
+\textbf{231732} &                        - \\
+\textbf{213360} &                     10.0 \\
+\textbf{231898} &                      5.0 \\
+\textbf{213731} &                     10.0 \\
+\textbf{232395} &                      7.0 \\
+\textbf{232796} &                      5.0 \\
+\textbf{233335} &                      5.0 \\
+\textbf{233747} &                     10.0 \\
+\textbf{255207} &                      0.0 \\
+\textbf{216459} &                        - \\
+\textbf{235951} &                        - \\
+\textbf{236276} &                        - \\
+\textbf{218090} &                     10.0 \\
+\textbf{255241} &                      7.0 \\
+\textbf{237618} &                     10.0 \\
+\textbf{199735} &                      0.0 \\
+\textbf{218975} &                      5.0 \\
+\textbf{238414} &                      0.0 \\
+\textbf{219613} &                      5.0 \\
+\textbf{219907} &                      7.0 \\
+\textbf{239052} &                      7.0 \\
+\textbf{220194} &                      5.0 \\
+\textbf{201326} &                     10.0 \\
+\textbf{156242} &                      5.0 \\
+\textbf{240317} &                      5.0 \\
+\textbf{240409} &                      7.0 \\
+\textbf{221515} &                      5.0 \\
+\textbf{255293} &                      0.0 \\
+\textbf{241430} &                      5.0 \\
+\textbf{222315} &                     10.0 \\
+\textbf{184528} &                      0.0 \\
+\textbf{222615} &                      3.0 \\
+\textbf{186966} &                      0.0 \\
+\textbf{244321} &                      5.0 \\
+\textbf{244379} &                      5.0 \\
+\textbf{187323} &                      7.0 \\
+\textbf{206194} &                      5.0 \\
+\textbf{245212} &                     10.0 \\
+\textbf{206883} &                      3.0 \\
+\textbf{245459} &                      5.0 \\
+\end{longtable}
+\end{center}
+\subsection{Notas}
+\label{sec:org9fbda65}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novoskeynesianos.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
+\end{center}
+\subsection{Notas e Presença}
+\label{sec:org46b7473}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novoskeynesianos_presenca.png}
+\end{center}
+\subsection{Verificação de plágio por amostragem}
+\label{sec:org9f4cc2d}
+\subsubsection{Sorteio}
+\label{sec:org479bb9f}
+
+\begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
+pre_selecionados = ["212883", "231898", "232796", "233335", "206194"]
+alunos = df.shape[0]
+sample = 0.3
+amostra = round(alunos * sample)
+bad_df = df.index.isin(pre_selecionados)
+elegivies = (
+    df.loc[~bad_df]
+    .query("`Resenha Novos Keynesianos` > 0")["Resenha Novos Keynesianos"]
+    .index.tolist()
+)
 
 
+resultado = np.sort(
+    np.random.choice(a=elegivies, size=amostra, replace=False)  # Sem repetição
+)
+resultado = pd.DataFrame(resultado)
+resultado.columns = ["RA Sorteados"]
+resultado.index = [i + 1 for i in resultado.index]
+print(resultado)
+resultado
+\end{minted}
+
+\begin{verbatim}
+   RA Sorteados
+1        156242
+2        199735
+3        206883
+4        212900
+5        213731
+6        218090
+7        219613
+8        222615
+9        232395
+10       237618
+11       238414
+12       240409
+13       241430
+\end{verbatim}
+\begin{verbatim}
+   RA Sorteados
+1        156242
+2        187323
+3        212900
+4        219613
+5        219907
+6        222615
+7        231302
+8        232796
+9        239052
+10       240409
+11       244321
+12       244379
+13       245459
+\end{verbatim}
+
+\subsubsection{Resultado Turnitin}
+\label{sec:org62f038d}
+
+\begin{table}[htbp]
+\caption{\label{TurnitinNvK}Resumo relatório de origilidadade}
+\centering
+\begin{tabular}{rl}
+\hline
+RA & Grau de semelhança\\
+\hline
+156242 & 15\%\\
+187323 & 20\%\\
+212900 & 1\%\\
+219613 & 0\%\\
+219907 & 8\%\\
+222615 & 0\%\\
+231302 & 2\%\\
+232795 & 11\%\\
+238414 & 2\%\\
+239052 & 8\%\\
+240409 & 0\%\\
+244321 & 1\%\\
+244379 & 1\%\\
+245459 & 53\%\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{enumerate}
+\item Gráfico
+\label{sec:orgc51cd55}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvK_fig.png}
+\end{center}
+
+\item Atualização das notas
+\label{sec:org6707f55}
+\end{enumerate}
 \section{Lista de presença e notas}
-\label{sec:org602e945}
+\label{sec:org136438b}
+\begin{center}\begin{landscape}
+\small
+\setlength\LTleft{0pt}
+\setlength\LTright{0pt}
+\begin{longtable}{llrrrrrrrrl}
+\caption{Lista de presença e de notas}\label{lista}\\
+\toprule
+{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &                   Email \\
+\textbf{RA    } &                                       &                       &             &             &             &                          &             &             &                            &                         \\
+\midrule
+\endhead
+\midrule
+\multicolumn{11}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &       36.96 &       16.39 &                        5.0 &  a212883@dac.unicamp.br \\
+\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &       64.49 &       81.97 &                        7.0 &  a212900@dac.unicamp.br \\
+\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &        8.70 &       52.46 &                        0.0 &  a231302@dac.unicamp.br \\
+\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &  a231732@dac.unicamp.br \\
+\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &       84.06 &       48.36 &                        0.0 &  a213360@dac.unicamp.br \\
+\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &       10.14 &       54.92 &                        7.0 &  b231898@dac.unicamp.br \\
+\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &        1.45 &       88.52 &                        7.0 &  b213731@dac.unicamp.br \\
+\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &           - &        3.28 &                        7.0 &  b232395@dac.unicamp.br \\
+\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &        2.90 &       82.79 &                        7.0 &  c232796@dac.unicamp.br \\
+\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &        3.62 &       18.03 &                        5.0 &  d233335@dac.unicamp.br \\
+\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &       22.46 &        5.74 &                        7.0 &  e233747@dac.unicamp.br \\
+\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &  f255207@dac.unicamp.br \\
+\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &  g216459@dac.unicamp.br \\
+\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &           - &           - &                          - &  g235951@dac.unicamp.br \\
+\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &           - &           - &                          - &  g236276@dac.unicamp.br \\
+\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &       78.99 &       13.11 &                       10.0 &  i218090@dac.unicamp.br \\
+\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &       68.84 &       59.02 &                        3.0 &  i255241@dac.unicamp.br \\
+\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &        2.90 &       58.20 &                       10.0 &  j237618@dac.unicamp.br \\
+\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &       79.71 &        1.64 &                        5.0 &  j199735@dac.unicamp.br \\
+\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &       69.57 &       86.89 &                        0.0 &  j218975@dac.unicamp.br \\
+\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      5.0 &       78.26 &        8.20 &                        7.0 &  j238414@dac.unicamp.br \\
+\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &           - &           - &                        5.0 &  k219613@dac.unicamp.br \\
+\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &           - &           - &                       10.0 &  l219907@dac.unicamp.br \\
+\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &       84.06 &       65.57 &                        7.0 &  l239052@dac.unicamp.br \\
+\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &       39.13 &        0.00 &                        0.0 &  l220194@dac.unicamp.br \\
+\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &       84.78 &        4.10 &                       10.0 &  l201326@dac.unicamp.br \\
+\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &           - &       38.52 &                        7.0 &  l156242@dac.unicamp.br \\
+\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &        0.72 &        9.84 &                        0.0 &  l240317@dac.unicamp.br \\
+\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &        3.62 &        4.10 &                        7.0 &  l240409@dac.unicamp.br \\
+\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &       13.04 &        9.02 &                        0.0 &  m221515@dac.unicamp.br \\
+\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &           - &           - &                        0.0 &  m255293@dac.unicamp.br \\
+\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &           - &           - &                        5.0 &  m241430@dac.unicamp.br \\
+\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &        1.45 &       43.44 &                        0.0 &  m222315@dac.unicamp.br \\
+\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &           - &           - &                        0.0 &  m184528@dac.unicamp.br \\
+\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &       31.88 &        0.00 &                        7.0 &  m222615@dac.unicamp.br \\
+\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &  s186966@dac.unicamp.br \\
+\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &       19.57 &       52.46 &                        0.0 &  s244321@dac.unicamp.br \\
+\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &       66.67 &       54.10 &                        0.0 &  s244379@dac.unicamp.br \\
+\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &           - &        0.82 &                        0.0 &  t187323@dac.unicamp.br \\
+\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &       54.35 &        0.00 &                        3.0 &  t206194@dac.unicamp.br \\
+\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &           - &           - &                        0.0 &  v245212@dac.unicamp.br \\
+\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &       23.91 &        0.82 &                        7.0 &  v206883@dac.unicamp.br \\
+\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      0.0 &       69.57 &       57.38 &                        0.0 &  v245459@dac.unicamp.br \\
+\end{longtable}
+\end{landscape}\end{center}
 \begin{center}\begin{landscape}
 \small
 \setlength\LTleft{0pt}
@@ -692,7 +964,7 @@ Carimbo de data/hora         &        &        &                                
 \textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &        2.90 &       58.20 &  j237618@dac.unicamp.br \\
 \textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &       79.71 &        1.64 &  j199735@dac.unicamp.br \\
 \textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &       69.57 &       86.89 &  j218975@dac.unicamp.br \\
-\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      5.0 &       78.26 &        8.20 &  j238414@dac.unicamp.br \\
+\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      0.0 &       78.26 &        8.20 &  j238414@dac.unicamp.br \\
 \textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &           - &           - &  k219613@dac.unicamp.br \\
 \textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &           - &           - &  l219907@dac.unicamp.br \\
 \textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &       84.06 &       65.57 &  l239052@dac.unicamp.br \\
@@ -714,7 +986,7 @@ Carimbo de data/hora         &        &        &                                
 \textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &       54.35 &        0.00 &  t206194@dac.unicamp.br \\
 \textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &           - &           - &  v245212@dac.unicamp.br \\
 \textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &       23.91 &        0.82 &  v206883@dac.unicamp.br \\
-\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      0.0 &       69.57 &       57.38 &  v245459@dac.unicamp.br \\
+\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      5.0 &       69.57 &       57.38 &  v245459@dac.unicamp.br \\
 \end{longtable}
 \end{landscape}\end{center}
 \begin{center}\begin{landscape}
@@ -1035,10 +1307,33 @@ Carimbo de data/hora         &        &        &                                
 
 
 \section{Seminários}
-\label{sec:orgefdd1d8}
+\label{sec:orgf1cba60}
 \subsection{Sorteio}
-\label{sec:orgb001054}
+\label{sec:orga26bcbb}
 
+\begin{table}
+\centering
+\caption{Resultado sorteio das atas - Seminários}
+\begin{tabular}{ll}
+\toprule
+{} & Resultado \\
+Grupos   &           \\
+\midrule
+Grupo 1  &     Ata 5 \\
+Grupo 2  &    Ata 11 \\
+Grupo 3  &     Ata 7 \\
+Grupo 4  &    Ata 12 \\
+Grupo 5  &     Ata 9 \\
+Grupo 6  &     Ata 4 \\
+Grupo 7  &    Ata 10 \\
+Grupo 8  &     Ata 3 \\
+Grupo 9  &     Ata 8 \\
+Grupo 10 &     Ata 1 \\
+Grupo 11 &     Ata 6 \\
+Grupo 12 &     Ata 2 \\
+\bottomrule
+\end{tabular}
+\end{table}
 \begin{table}
 \centering
 \caption{Resultado sorteio das atas - Seminários}
@@ -1088,5 +1383,5 @@ Grupo 12 &     Ata 8 \\
 
 
 \subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituir}
-\label{sec:org1a2b0f6}
+\label{sec:org7d2ff8e}
 \end{document}
