--- a/Materias/2S2020/PED_CE342/Turma_C/197724.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/197724.org
@@ -50,3 +50,19 @@ No início da resenha são apresentados alguns dos conceitos da escola monetaris
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido parcialmente
+:CONCEITOS: Atingido parcialmente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido parcialmente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
