--- a/Materias/2S2020/PED_CE342/Turma_C/213549.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/213549.org
@@ -50,3 +50,19 @@ Corretamente aponta que a regra monetária é a principal proposição do moneta
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO:
+:ARGUMENTO:
+:CONCEITOS:
+:DESENVOLVIMENTO:
+:CONCLUSAO:
+:CLAREZA:
+:NOTA:
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado. Foi resenhado o NCM.
