--- a/Materias/2S2020/PED_CE342/Turma_C/234311.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/234311.org
@@ -50,3 +50,19 @@ Contrapôs o monetarismo e o keynesianismo ortodoxos e especificou as diferença
 ** Comentários individuais
 
    Foram includos no documento enviado.
+* Resenha 3: Novos Keynesianos                                        :private:
+:PROPERTIES:
+:TAREFA:   Resenha 3
+:OBJETIVO: Atingido parcialmente
+:ARGUMENTO: Atingido satisfatoriamente
+:CONCEITOS: Atingido satisfatoriamente
+:DESENVOLVIMENTO: Atingido parcialmente
+:CONCLUSAO: Atingido parcialmente
+:CLAREZA:  Atingido satisfatoriamente
+:NOTA:     Atingido parcialmente
+:TURNITIN:
+:END:
+
+** Comentários individuais
+
+Foram includos no documento enviado.
