--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-23 seg 09:49
+% Created 2020-11-24 ter 19:00
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,7 +38,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:org79daf25}
+\label{sec:orgd14089e}
 
 \begin{center}
 \begin{longtable}{lr}
@@ -93,22 +93,149 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \textbf{225851} &                  50.0 \\
 \end{longtable}
 \end{center}
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Monetaristas}\\
+\toprule
+{} &  Resenha Monetaristas \\
+\textbf{RA    } &                       \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{230645} &                  50.0 \\
+\textbf{213549} &                  30.0 \\
+\textbf{257748} &                  50.0 \\
+\textbf{232568} &                  70.0 \\
+\textbf{233566} &                  30.0 \\
+\textbf{215626} &                   0.0 \\
+\textbf{91108 } &                     - \\
+\textbf{234311} &                  50.0 \\
+\textbf{216397} &                  30.0 \\
+\textbf{197474} &                  50.0 \\
+\textbf{234982} &                   0.0 \\
+\textbf{235042} &                   0.0 \\
+\textbf{197724} &                  50.0 \\
+\textbf{217350} &                  30.0 \\
+\textbf{174154} &                  30.0 \\
+\textbf{237534} &                  30.0 \\
+\textbf{237856} &                  50.0 \\
+\textbf{199967} &                  70.0 \\
+\textbf{103034} &                  50.0 \\
+\textbf{172577} &                  50.0 \\
+\textbf{159866} &                  50.0 \\
+\textbf{221896} &                  70.0 \\
+\textbf{257876} &                 100.0 \\
+\textbf{242087} &                   0.0 \\
+\textbf{242328} &                  50.0 \\
+\textbf{147614} &                   0.0 \\
+\textbf{176104} &                   0.0 \\
+\textbf{205149} &                 100.0 \\
+\textbf{205151} &                   0.0 \\
+\textbf{244207} &                  70.0 \\
+\textbf{158425} &                  50.0 \\
+\textbf{257932} &                 100.0 \\
+\textbf{177964} &                  70.0 \\
+\textbf{245099} &                  50.0 \\
+\textbf{206806} &                  50.0 \\
+\textbf{225851} &                  50.0 \\
+\end{longtable}
+\end{center}
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Monetaristas}\\
+\toprule
+{} &  Resenha Monetaristas \\
+\textbf{RA    } &                       \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{230645} &                  50.0 \\
+\textbf{213549} &                  30.0 \\
+\textbf{257748} &                  50.0 \\
+\textbf{232568} &                  70.0 \\
+\textbf{233566} &                  30.0 \\
+\textbf{215626} &                   0.0 \\
+\textbf{91108 } &                     - \\
+\textbf{234311} &                  50.0 \\
+\textbf{216397} &                  30.0 \\
+\textbf{197474} &                  50.0 \\
+\textbf{234982} &                   0.0 \\
+\textbf{235042} &                   0.0 \\
+\textbf{197724} &                  50.0 \\
+\textbf{217350} &                  30.0 \\
+\textbf{174154} &                  30.0 \\
+\textbf{237534} &                  30.0 \\
+\textbf{237856} &                  50.0 \\
+\textbf{199967} &                  70.0 \\
+\textbf{103034} &                  50.0 \\
+\textbf{172577} &                  50.0 \\
+\textbf{159866} &                  50.0 \\
+\textbf{221896} &                  70.0 \\
+\textbf{257876} &                 100.0 \\
+\textbf{242087} &                   0.0 \\
+\textbf{242328} &                  50.0 \\
+\textbf{147614} &                   0.0 \\
+\textbf{176104} &                   0.0 \\
+\textbf{205149} &                 100.0 \\
+\textbf{205151} &                   0.0 \\
+\textbf{244207} &                  70.0 \\
+\textbf{158425} &                  50.0 \\
+\textbf{257932} &                 100.0 \\
+\textbf{177964} &                  70.0 \\
+\textbf{245099} &                  50.0 \\
+\textbf{206806} &                  50.0 \\
+\textbf{225851} &                  50.0 \\
+\end{longtable}
+\end{center}
+
+
+
 
 \subsection{Notas}
-\label{sec:org9869720}
+\label{sec:orgb9bce56}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
+\end{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
 
+
+
 \subsection{Notas e presença}
-\label{sec:org7160a6e}
+\label{sec:org7795778}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
+\end{center}
+
 
 \section{Novos Clássicos}
-\label{sec:orge079805}
+\label{sec:org6e19a0e}
 
 \begin{itemize}
 \item[{$\square$}] Computar notas Forms
@@ -167,20 +294,140 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \textbf{225851} &                      0.0 \\
 \end{longtable}
 \end{center}
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novos Clássicos}\\
+\toprule
+{} &  Resenha Novos Clássicos \\
+\textbf{RA    } &                          \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{230645} &                      5.0 \\
+\textbf{213549} &                      5.0 \\
+\textbf{257748} &                      7.0 \\
+\textbf{232568} &                      5.0 \\
+\textbf{233566} &                      7.0 \\
+\textbf{215626} &                      0.0 \\
+\textbf{91108 } &                        - \\
+\textbf{234311} &                      5.0 \\
+\textbf{216397} &                      0.0 \\
+\textbf{197474} &                      5.0 \\
+\textbf{234982} &                      0.0 \\
+\textbf{235042} &                      0.0 \\
+\textbf{197724} &                      5.0 \\
+\textbf{217350} &                      0.0 \\
+\textbf{174154} &                      0.0 \\
+\textbf{237534} &                      3.0 \\
+\textbf{237856} &                      5.0 \\
+\textbf{199967} &                      7.0 \\
+\textbf{103034} &                      5.0 \\
+\textbf{172577} &                      7.0 \\
+\textbf{159866} &                      5.0 \\
+\textbf{221896} &                     10.0 \\
+\textbf{257876} &                     10.0 \\
+\textbf{242087} &                        - \\
+\textbf{242328} &                      7.0 \\
+\textbf{147614} &                      0.0 \\
+\textbf{176104} &                        - \\
+\textbf{205149} &                      0.0 \\
+\textbf{205151} &                      7.0 \\
+\textbf{244207} &                      7.0 \\
+\textbf{158425} &                      7.0 \\
+\textbf{257932} &                      7.0 \\
+\textbf{177964} &                      5.0 \\
+\textbf{245099} &                      7.0 \\
+\textbf{206806} &                      0.0 \\
+\textbf{225851} &                      0.0 \\
+\end{longtable}
+\end{center}
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novos Clássicos}\\
+\toprule
+{} &  Resenha Novos Clássicos \\
+\textbf{RA    } &                          \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{230645} &                      5.0 \\
+\textbf{213549} &                      5.0 \\
+\textbf{257748} &                      7.0 \\
+\textbf{232568} &                      5.0 \\
+\textbf{233566} &                      7.0 \\
+\textbf{215626} &                      0.0 \\
+\textbf{91108 } &                        - \\
+\textbf{234311} &                      5.0 \\
+\textbf{216397} &                      0.0 \\
+\textbf{197474} &                      5.0 \\
+\textbf{234982} &                      0.0 \\
+\textbf{235042} &                      0.0 \\
+\textbf{197724} &                      5.0 \\
+\textbf{217350} &                      0.0 \\
+\textbf{174154} &                      0.0 \\
+\textbf{237534} &                      3.0 \\
+\textbf{237856} &                      5.0 \\
+\textbf{199967} &                      7.0 \\
+\textbf{103034} &                      5.0 \\
+\textbf{172577} &                      7.0 \\
+\textbf{159866} &                      5.0 \\
+\textbf{221896} &                     10.0 \\
+\textbf{257876} &                     10.0 \\
+\textbf{242087} &                        - \\
+\textbf{242328} &                      7.0 \\
+\textbf{147614} &                      0.0 \\
+\textbf{176104} &                        - \\
+\textbf{205149} &                      0.0 \\
+\textbf{205151} &                      7.0 \\
+\textbf{244207} &                      7.0 \\
+\textbf{158425} &                      7.0 \\
+\textbf{257932} &                      7.0 \\
+\textbf{177964} &                      5.0 \\
+\textbf{245099} &                      7.0 \\
+\textbf{206806} &                      0.0 \\
+\textbf{225851} &                      0.0 \\
+\end{longtable}
+\end{center}
 \subsection{Notas}
-\label{sec:orgdb4a9c6}
+\label{sec:orgb2114a1}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
 \end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
+\end{center}
+
+
 \subsection{Notas e Presença}
-\label{sec:org2cf47e3}
+\label{sec:org35d5dcd}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
+\end{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:orgbbbe2e9}
+\label{sec:org2a61c9f}
 \subsubsection{Sorteio}
-\label{sec:org34b4a5c}
+\label{sec:org036dcd0}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["216397", "235042"]
@@ -216,13 +463,39 @@ resultado
 10       245099
 11       257876
 \end{verbatim}
-
-
+\begin{verbatim}
+   RA Sorteados
+1        103034
+2        199967
+3        205151
+4        213549
+5        230645
+6        232568
+7        233566
+8        237856
+9        242328
+10       245099
+11       257876
+\end{verbatim}
+\begin{verbatim}
+   RA Sorteados
+1        103034
+2        199967
+3        205151
+4        213549
+5        230645
+6        232568
+7        233566
+8        237856
+9        242328
+10       245099
+11       257876
+\end{verbatim}
 
 
 
 \subsubsection{Resultado Turnitin \textit{<2020-11-14 sáb>}}
-\label{sec:org5235fc5}
+\label{sec:org4eacc30}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -250,22 +523,47 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:org749c03f}
+\label{sec:orgc2247b5}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
+\end{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
 
 \item Atualizando notas
-\label{sec:org188f4bb}
+\label{sec:org005f6ba}
 \end{enumerate}
 
 \subsection{Questões}
-\label{sec:orgbe6801c}
+\label{sec:orgdfa711d}
+
 
 
 \subsubsection{Importando pacotes e funções}
-\label{sec:org8204940}
+\label{sec:org4001b6c}
 
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
+\end{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
 \end{center}
@@ -273,71 +571,244 @@ RA & Grau de semelhança\\
 
 
 
-\section{Lista de presença e notas}
-\label{sec:org7433acb}
-\begin{center}\begin{landscape}
-\small
-\setlength\LTleft{0pt}
-\setlength\LTright{0pt}
-\begin{longtable}{llrrrrrl}
-\caption{Lista de presença e de notas}\label{lista}\\
+
+\section{Novos Keynesianos}
+\label{sec:orge240eed}
+
+\begin{itemize}
+\item[{$\boxtimes$}] Computar notas
+\item[{$\square$}] Preencher presenhas na tabela da Ana Rosa
+\item[{$\square$}] Sortear turnitin
+\end{itemize}
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novos Keynesianos}\\
 \toprule
-{} &                                   Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &                   Email \\
-\textbf{RA    } &                                        &                       &             &             &             &                          &                         \\
+{} &  Resenha Novos Keynesianos \\
+\textbf{RA    } &                            \\
 \midrule
 \endhead
 \midrule
-\multicolumn{8}{r}{{Continued on next page}} \\
+\multicolumn{2}{r}{{Continued on next page}} \\
 \midrule
 \endfoot
 
 \bottomrule
 \endlastfoot
-\textbf{230645} &                    alice pereira dario &                  50.0 &       17.86 &        0.00 &       19.47 &                      5.0 &  a230645@dac.unicamp.br \\
-\textbf{213549} &           beatriz helena toledo pastre &                  30.0 &        0.00 &        0.00 &        6.19 &                      5.0 &  b213549@dac.unicamp.br \\
-\textbf{257748} &             breno rivelino fima castro &                  50.0 &        7.14 &        5.31 &       93.81 &                      7.0 &  b257748@dac.unicamp.br \\
-\textbf{232568} &                 caio cimino de almeida &                  70.0 &           - &        2.65 &       54.87 &                      5.0 &  c232568@dac.unicamp.br \\
-\textbf{233566} &                 diego tabacof labriola &                  30.0 &        0.00 &        0.00 &       91.15 &                      7.0 &  d233566@dac.unicamp.br \\
-\textbf{215626} &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &  f215626@dac.unicamp.br \\
-\textbf{91108 } &                 felipe eboli sotorilli &                     - &        1.79 &        0.00 &       77.88 &                        - &   f91108@dac.unicamp.br \\
-\textbf{234311} &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &       92.92 &                      5.0 &  f234311@dac.unicamp.br \\
-\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &       76.11 &                      3.0 &  g216397@dac.unicamp.br \\
-\textbf{197474} &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &       51.33 &                      5.0 &  g197474@dac.unicamp.br \\
-\textbf{234982} &                 gabriel pereira santos &                   0.0 &           - &       13.27 &        0.00 &                      0.0 &  g234982@dac.unicamp.br \\
-\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &        0.00 &                      5.0 &  g235042@dac.unicamp.br \\
-\textbf{197724} &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &       74.34 &                      5.0 &  g197724@dac.unicamp.br \\
-\textbf{217350} &       guilherme yoshio agata domingues &                  30.0 &           - &           - &           - &                      0.0 &  g217350@dac.unicamp.br \\
-\textbf{174154} &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &       16.81 &                      0.0 &  g174154@dac.unicamp.br \\
-\textbf{237534} &         joao mateus rodrigues da silva &                  30.0 &           - &           - &           - &                      3.0 &  j237534@dac.unicamp.br \\
-\textbf{237856} &        joão vitor dos santos rodrigues &                  50.0 &        1.79 &        0.00 &       91.15 &                      5.0 &  j237856@dac.unicamp.br \\
-\textbf{199967} &                   jonas pereira cintra &                  70.0 &        0.00 &        3.54 &       82.30 &                      7.0 &  j199967@dac.unicamp.br \\
-\textbf{103034} &  leonardo augusto de oliveira piovesan &                  50.0 &        0.00 &        0.00 &       93.81 &                      5.0 &  l103034@dac.unicamp.br \\
-\textbf{172577} &                   lucas azevedo soares &                  50.0 &        2.68 &        5.31 &       14.16 &                      7.0 &  l172577@dac.unicamp.br \\
-\textbf{159866} &              marcela chenfel dos anjos &                  50.0 &        0.89 &        0.00 &       91.15 &                      5.0 &  m159866@dac.unicamp.br \\
-\textbf{221896} &               mariana sayuri silva doi &                  70.0 &       34.82 &        0.88 &       18.58 &                     10.0 &  m221896@dac.unicamp.br \\
-\textbf{257876} &    maryana beatriz ventura de carvalho &                 100.0 &       67.86 &        0.88 &       93.81 &                     10.0 &  m257876@dac.unicamp.br \\
-\textbf{242087} &                          miguel razera &                   0.0 &        0.89 &        1.77 &        0.00 &                        - &  m242087@dac.unicamp.br \\
-\textbf{242328} &    natalia kimberlle tavares imperiano &                  50.0 &           - &           - &        0.88 &                      7.0 &  n242328@dac.unicamp.br \\
-\textbf{147614} &          pedro augusto de almeida rosa &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &  p147614@dac.unicamp.br \\
-\textbf{176104} &              rafael da silva tomasella &                   0.0 &           - &           - &           - &                        - &  r176104@dac.unicamp.br \\
-\textbf{205149} &                 raphaela freitas souza &                 100.0 &           - &           - &           - &                      0.0 &  r205149@dac.unicamp.br \\
-\textbf{205151} &               raphaela prado francisco &                   0.0 &        0.89 &       47.79 &        4.42 &                      7.0 &  r205151@dac.unicamp.br \\
-\textbf{244207} &                 sanny alves dos santos &                  70.0 &        0.89 &        0.00 &        0.00 &                      7.0 &  s244207@dac.unicamp.br \\
-\textbf{158425} &                           tales alonso &                  50.0 &        0.89 &       61.95 &       61.06 &                      7.0 &  t158425@dac.unicamp.br \\
-\textbf{257932} &              thaís monello de oliveira &                 100.0 &        0.89 &        0.00 &       30.09 &                      7.0 &  t257932@dac.unicamp.br \\
-\textbf{177964} &               victor hugo alves duarte &                  70.0 &        0.00 &        0.00 &        0.00 &                      5.0 &  v177964@dac.unicamp.br \\
-\textbf{245099} &                            victor maia &                  50.0 &       16.07 &       53.98 &       70.80 &                      7.0 &  v245099@dac.unicamp.br \\
-\textbf{206806} &            vinicius jeronimo capodalio &                  50.0 &        0.00 &        7.08 &        2.65 &                      0.0 &  v206806@dac.unicamp.br \\
-\textbf{225851} &                william de sousa rabelo &                  50.0 &           - &           - &           - &                      0.0 &  w225851@dac.unicamp.br \\
+\textbf{230645} &                        5.0 \\
+\textbf{213549} &                        0.0 \\
+\textbf{257748} &                        5.0 \\
+\textbf{232568} &                        0.0 \\
+\textbf{233566} &                        0.0 \\
+\textbf{215626} &                        0.0 \\
+\textbf{91108 } &                          - \\
+\textbf{234311} &                        5.0 \\
+\textbf{216397} &                        0.0 \\
+\textbf{197474} &                        0.0 \\
+\textbf{234982} &                          - \\
+\textbf{235042} &                        5.0 \\
+\textbf{197724} &                        5.0 \\
+\textbf{217350} &                          - \\
+\textbf{174154} &                        0.0 \\
+\textbf{237534} &                        0.0 \\
+\textbf{237856} &                        0.0 \\
+\textbf{199967} &                        7.0 \\
+\textbf{103034} &                        0.0 \\
+\textbf{172577} &                        0.0 \\
+\textbf{159866} &                        0.0 \\
+\textbf{221896} &                       10.0 \\
+\textbf{257876} &                       10.0 \\
+\textbf{242087} &                          - \\
+\textbf{242328} &                        5.0 \\
+\textbf{147614} &                        0.0 \\
+\textbf{176104} &                          - \\
+\textbf{205149} &                        0.0 \\
+\textbf{205151} &                        0.0 \\
+\textbf{244207} &                        0.0 \\
+\textbf{158425} &                        5.0 \\
+\textbf{257932} &                        0.0 \\
+\textbf{177964} &                        0.0 \\
+\textbf{245099} &                        0.0 \\
+\textbf{206806} &                        0.0 \\
+\textbf{225851} &                        0.0 \\
+\end{longtable}
+\end{center}
+\subsection{Notas}
+\label{sec:org164f97e}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novoskeynesianos.png}
+\end{center}
+
+
+
+
+\subsection{Notas e Presença}
+\label{sec:orge143be9}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novoskeynesianos_presenca.png}
+\end{center}
+\subsection{Verificação de plágio por amostragem}
+\label{sec:org6c5bf76}
+\subsubsection{Sorteio}
+\label{sec:orgf20944c}
+
+Como foram entregues aproximadamente 30\% de resenhas, todos os alunos foram submetidos ao turnitin.
+
+\subsubsection{Resultado Turnitin}
+\label{sec:org522fdcc}
+
+\begin{table}[htbp]
+\caption{\label{TurnitinNvK}Resumo relatório de origilidadade}
+\centering
+\begin{tabular}{rl}
+\hline
+RA & Grau de semelhança\\
+\hline
+158425 & 3\%\\
+197724 & 0\%\\
+199667 & 3\%\\
+213549 & 2\%\\
+221896 & 26\%\\
+230645 & 0\%\\
+234311 & 0\%\\
+235042 & 29\%\\
+244207 & 52\%\\
+257748 & 0\%\\
+257876 & 7\%\\
+244321 & 1\%\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{enumerate}
+\item Gráfico
+\label{sec:orgbcb0822}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvK_fig.png}
+\end{center}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvK_fig.png}
+\end{center}
+
+
+
+\item Atualização das notas
+\label{sec:org738e4d6}
+\end{enumerate}
+
+\section{Lista de presença e notas}
+\label{sec:orge216533}
+\begin{center}\begin{landscape}
+\small
+\setlength\LTleft{0pt}
+\setlength\LTright{0pt}
+\begin{longtable}{llrrrrrrrrl}
+\caption{Lista de presença e de notas}\label{lista}\\
+\toprule
+{} &                                   Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &                   Email \\
+\textbf{RA    } &                                        &                       &             &             &             &                          &             &             &                            &                         \\
+\midrule
+\endhead
+\midrule
+\multicolumn{11}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{230645} &                    alice pereira dario &                  50.0 &       17.86 &        0.00 &       19.47 &                      5.0 &       57.50 &        0.00 &                        5.0 &  a230645@dac.unicamp.br \\
+\textbf{213549} &           beatriz helena toledo pastre &                  30.0 &        0.00 &        0.00 &        6.19 &                      5.0 &           - &        5.88 &                        0.0 &  b213549@dac.unicamp.br \\
+\textbf{257748} &             breno rivelino fima castro &                  50.0 &        7.14 &        5.31 &       93.81 &                      7.0 &       28.33 &       70.59 &                        5.0 &  b257748@dac.unicamp.br \\
+\textbf{232568} &                 caio cimino de almeida &                  70.0 &           - &        2.65 &       54.87 &                      5.0 &       70.00 &        0.00 &                        0.0 &  c232568@dac.unicamp.br \\
+\textbf{233566} &                 diego tabacof labriola &                  30.0 &        0.00 &        0.00 &       91.15 &                      7.0 &           - &           - &                        0.0 &  d233566@dac.unicamp.br \\
+\textbf{215626} &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &       18.33 &       11.76 &                        0.0 &  f215626@dac.unicamp.br \\
+\textbf{91108 } &                 felipe eboli sotorilli &                     - &        1.79 &        0.00 &       77.88 &                        - &       29.17 &       76.47 &                          - &   f91108@dac.unicamp.br \\
+\textbf{234311} &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &       92.92 &                      5.0 &           - &       76.47 &                        5.0 &  f234311@dac.unicamp.br \\
+\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &       76.11 &                      3.0 &        0.83 &        0.00 &                        0.0 &  g216397@dac.unicamp.br \\
+\textbf{197474} &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &       51.33 &                      5.0 &       46.67 &       47.06 &                        0.0 &  g197474@dac.unicamp.br \\
+\textbf{234982} &                 gabriel pereira santos &                   0.0 &           - &       13.27 &        0.00 &                      0.0 &           - &           - &                          - &  g234982@dac.unicamp.br \\
+\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &        0.00 &                      5.0 &           - &       17.65 &                        5.0 &  g235042@dac.unicamp.br \\
+\textbf{197724} &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &       74.34 &                      5.0 &       30.00 &       82.35 &                        5.0 &  g197724@dac.unicamp.br \\
+\textbf{217350} &       guilherme yoshio agata domingues &                  30.0 &           - &           - &           - &                      0.0 &           - &           - &                          - &  g217350@dac.unicamp.br \\
+\textbf{174154} &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &       16.81 &                      0.0 &           - &           - &                        0.0 &  g174154@dac.unicamp.br \\
+\textbf{237534} &         joao mateus rodrigues da silva &                  30.0 &           - &           - &           - &                      3.0 &           - &           - &                        0.0 &  j237534@dac.unicamp.br \\
+\textbf{237856} &        joão vitor dos santos rodrigues &                  50.0 &        1.79 &        0.00 &       91.15 &                      5.0 &       90.83 &        0.00 &                        0.0 &  j237856@dac.unicamp.br \\
+\textbf{199967} &                   jonas pereira cintra &                  70.0 &        0.00 &        3.54 &       82.30 &                      7.0 &       50.83 &        0.00 &                        7.0 &  j199967@dac.unicamp.br \\
+\textbf{103034} &  leonardo augusto de oliveira piovesan &                  50.0 &        0.00 &        0.00 &       93.81 &                      5.0 &       93.33 &       70.59 &                        0.0 &  l103034@dac.unicamp.br \\
+\textbf{172577} &                   lucas azevedo soares &                  50.0 &        2.68 &        5.31 &       14.16 &                      7.0 &       75.00 &       76.47 &                        0.0 &  l172577@dac.unicamp.br \\
+\textbf{159866} &              marcela chenfel dos anjos &                  50.0 &        0.89 &        0.00 &       91.15 &                      5.0 &       50.83 &       76.47 &                        0.0 &  m159866@dac.unicamp.br \\
+\textbf{221896} &               mariana sayuri silva doi &                  70.0 &       34.82 &        0.88 &       18.58 &                     10.0 &       37.50 &        0.00 &                       10.0 &  m221896@dac.unicamp.br \\
+\textbf{257876} &    maryana beatriz ventura de carvalho &                 100.0 &       67.86 &        0.88 &       93.81 &                     10.0 &       83.33 &       70.59 &                       10.0 &  m257876@dac.unicamp.br \\
+\textbf{242087} &                          miguel razera &                   0.0 &        0.89 &        1.77 &        0.00 &                        - &           - &           - &                          - &  m242087@dac.unicamp.br \\
+\textbf{242328} &    natalia kimberlle tavares imperiano &                  50.0 &           - &           - &        0.88 &                      7.0 &           - &           - &                        5.0 &  n242328@dac.unicamp.br \\
+\textbf{147614} &          pedro augusto de almeida rosa &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &       93.33 &       76.47 &                        0.0 &  p147614@dac.unicamp.br \\
+\textbf{176104} &              rafael da silva tomasella &                   0.0 &           - &           - &           - &                        - &           - &           - &                          - &  r176104@dac.unicamp.br \\
+\textbf{205149} &                 raphaela freitas souza &                 100.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &  r205149@dac.unicamp.br \\
+\textbf{205151} &               raphaela prado francisco &                   0.0 &        0.89 &       47.79 &        4.42 &                      7.0 &           - &       76.47 &                        0.0 &  r205151@dac.unicamp.br \\
+\textbf{244207} &                 sanny alves dos santos &                  70.0 &        0.89 &        0.00 &        0.00 &                      7.0 &           - &       64.71 &                        0.0 &  s244207@dac.unicamp.br \\
+\textbf{158425} &                           tales alonso &                  50.0 &        0.89 &       61.95 &       61.06 &                      7.0 &       29.17 &       70.59 &                        5.0 &  t158425@dac.unicamp.br \\
+\textbf{257932} &              thaís monello de oliveira &                 100.0 &        0.89 &        0.00 &       30.09 &                      7.0 &       24.17 &       64.71 &                        0.0 &  t257932@dac.unicamp.br \\
+\textbf{177964} &               victor hugo alves duarte &                  70.0 &        0.00 &        0.00 &        0.00 &                      5.0 &           - &           - &                        0.0 &  v177964@dac.unicamp.br \\
+\textbf{245099} &                            victor maia &                  50.0 &       16.07 &       53.98 &       70.80 &                      7.0 &       25.00 &        0.00 &                        0.0 &  v245099@dac.unicamp.br \\
+\textbf{206806} &            vinicius jeronimo capodalio &                  50.0 &        0.00 &        7.08 &        2.65 &                      0.0 &       29.17 &        0.00 &                        0.0 &  v206806@dac.unicamp.br \\
+\textbf{225851} &                william de sousa rabelo &                  50.0 &           - &           - &           - &                      0.0 &           - &      100.00 &                        0.0 &  w225851@dac.unicamp.br \\
 \end{longtable}
 \end{landscape}\end{center}
 
 
 
+
+
 \section{Seminários}
-\label{sec:orgc3ebe50}
+\label{sec:org0b98e41}
 \subsection{Sorteio}
-\label{sec:org7d71d1a}
+\label{sec:orgd68eba8}
+\begin{table}
+\centering
+\caption{Resultado sorteio das atas - Seminários}
+\begin{tabular}{ll}
+\toprule
+{} & Resultado \\
+Grupos   &           \\
+\midrule
+Grupo 1  &     Ata 7 \\
+Grupo 2  &     Ata 5 \\
+Grupo 3  &     Ata 1 \\
+Grupo 4  &    Ata 11 \\
+Grupo 5  &     Ata 8 \\
+Grupo 6  &     Ata 9 \\
+Grupo 7  &    Ata 12 \\
+Grupo 8  &    Ata 10 \\
+Grupo 9  &     Ata 2 \\
+Grupo 10 &     Ata 4 \\
+Grupo 11 &     Ata 6 \\
+Grupo 12 &     Ata 3 \\
+\bottomrule
+\end{tabular}
+\end{table}
+\begin{table}
+\centering
+\caption{Resultado sorteio das atas - Seminários}
+\begin{tabular}{ll}
+\toprule
+{} & Resultado \\
+Grupos   &           \\
+\midrule
+Grupo 1  &     Ata 6 \\
+Grupo 2  &     Ata 3 \\
+Grupo 3  &    Ata 10 \\
+Grupo 4  &    Ata 12 \\
+Grupo 5  &     Ata 8 \\
+Grupo 6  &    Ata 11 \\
+Grupo 7  &     Ata 5 \\
+Grupo 8  &     Ata 1 \\
+Grupo 9  &     Ata 2 \\
+Grupo 10 &     Ata 9 \\
+Grupo 11 &     Ata 7 \\
+Grupo 12 &     Ata 4 \\
+\bottomrule
+\end{tabular}
+\end{table}
 \begin{table}
 \centering
 \caption{Resultado sorteio das atas - Seminários}
@@ -362,6 +833,7 @@ Grupo 12 &     Ata 4 \\
 \end{tabular}
 \end{table}
 
+
 \subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituição}
-\label{sec:org0cd55a7}
+\label{sec:orgf1fa6fb}
 \end{document}
